--- a/docs/需求文档.md
+++ b/docs/需求文档.md
@@ -4,17 +4,55 @@
 
 ### 1.1 项目背景介绍
 
+#### 1.1.1   项目简介
+ApacheAssistant是一款面向开发者的Web应用程序，它可以帮助用户更好地上手Apache服务器，同时可以帮助用户监听Apache服务器的相关性能指标，是一款帮助开发者更好地管理服务器，提升开发效率的工作应用。
+#### 1.1.2   相关工作
+Apache HTTP Server（简称Apache）是Apache软件基金会的一个开放源码的网页服务器，可以在大多数计算机操作系统中运行，由于其多平台和安全性被广泛使用，是最流行的Web服务器端软件之一。它快速、可靠并且可通过简单的API扩展，将Perl/Python等解释器编译到服务器中。它可以运行在几乎所有广泛使用的计算机平台上。Apache源于NCSAhttpd服务器，经过多次修改，在不断加入的开发者的持续迭代下，Apache功能不断强大，特性越来越好，缺陷逐步修复，目前是世界上最流行的Web服务器软件之一。
+#### 1.1.3   文档组织
+本文档是北京航空航天大学计算机学院研究生课程软件工程实验的课程要求文档之一，本文档旨在对本小组的选题进行简要描述，并对项目需求进行分析。
+软件需求被定义为：
+1)  用户解决问题或达到目标所需条件或权能(Capability)。 
+2)  系统或系统部件要满足合同、标准、规范或其它正式规定文档所需具有的条件或权能。
+3)  一种反映上面(1)或(2)所述条件或权能的文档说明。
+它包括业务需求、用户需求、功能需求、非功能需求。本文档的章节1.2、1.3、1.4、1.5将从这四个方面进行具体的描述。文档的章节二以补充章节一为出发点，从系统架构方面对本程序进行说明。
+#### 1.1.4   术语和缩略语说明
+本文中将出现部分属于和缩略语，其含义在此部分进行统一解释，文档中不做再次解释。
+
+
 ### 1.2 项目业务需求
+
+#### 1.2.1   ApacheAssistant业务需求概述
+业务需求（Business requirement）表示组织或客户高层次的目标。业务需求通常来自项目投资人、购买产品的客户、实际用户的管理者、市场营销部门或产品策划部门。业务需求描述了组织为什么要开发一个系统，即组织希望达到的目标。使用前景和范围（vision and scope）文档来记录业务需求，这份文档有时也被称作项目轮廓图或市场需求（project charter 或 market requirement）文档。
+
 
 ### 1.3 项目用户需求
 
-a test
+#### 1.3.1   用户需求概述
+用户需求（User requirement）描述的是用户的目标，或用户要求系统必须能完成的任务。ApacheAssistant应用的主要用户是使用Apache进行完成相关任务的生产开发者，其次，是对本开源项目有兴趣并投入本项目开发的项目开发者。
+生产开发者希望通过本应用达成一定的目的，例如通过图形化界面更好地管理Apache服务器，配置文件的查看、修改，对Apache日志的管理等。项目开发者希望能快速有效地参与到本项目中，要求项目文档、源码的可读性强。
+
 
 ### 1.4 项目功能需求
 
 项目功能需求的具体内容，测试一下~
 
 ### 1.5 项目非功能需求
+
+#### 1.5.1   项目非功能需求概述
+软件非功能性需求是指软件功能需求以外的需求，包括产品必须遵从的标准、规范和合约，性能要求，设计或实现的宏观约束条件及质量属性。
+#### 1.5.2   兼容性
+该Web应用应能在当前主流平台上运行，包括Windows7、Windows8、Windows10及Linux内核操作系统。
+#### 1.5.3   可靠性
+该应用保证本身运行的可靠性，作为一款辅助开发者对Apache平台进行操作的应用，应用本身的操作不应破坏Apache平台本身的正确性，具体表现即是不影响Apache本身的功能，并不会潜在的影响Apache平台本身的功能。
+#### 1.5.4   可用性
+该应用应能够稳定运行，且运行中能提供给用户前述功能。
+#### 1.5.5   稳定性
+系统在运行时能够始终稳定运行，不经常出现故障，且出现中小型故障时，能够发出故障警告并给出故障诊断素材供运维人员使用，出现大型故障时，能够保存上下文信息。
+#### 1.5.6   易维护性
+应用部分模块或方法的更新和更换不应影响整个应用的正常运行。
+#### 1.5.7   可扩展性
+作为一款开源软件，应用需要具备可扩展性，根据实际情况的不同（例如开发者的变化，用户需求的变化，物理设备的变化），对于应用本身的功能变动应该被支持。
+
 
 ## 应用架构
 
