--- a/docs/需求文档.md
+++ b/docs/需求文档.md
@@ -78,78 +78,131 @@ RUCM由以下两部分组成：
 
 #### 1.4.2   配置管理
 
+![](https://github.com/buaa0110/ApacheAssistant/blob/master/usecase/RUCM_table/%E9%85%8D%E7%BD%AE%E7%AE%A1%E7%90%86.png)
+
+开发者可以通过ApacheAssistant对Apache HTTP Server进行配置管理，配置管理的一般流程如下：首先开发者进入ApacheAssistant的配置管理模块，之后开发者根据自己的需求进行配置文件路径的设置或对配置项进行修改，配置管理模块实现开发者的需求之后，开发者关闭配置管理模块即可。
+
+##### 1.4.2.1 设置配置文件路径
+
+![](https://github.com/buaa0110/ApacheAssistant/blob/master/usecase/RUCM_table/%E8%AE%BE%E7%BD%AE%E9%85%8D%E7%BD%AE%E6%96%87%E4%BB%B6%E8%B7%AF%E5%BE%84.png)
+
+开发者可以通过ApacheAssistant设置配置文件路径，设置配置文件路径的一般流程如下：首先开发者进入配置管理模块，然后开发者设置配置文件路径，然后ApacheAssistant验证设置的配置文件路径是否存在，若文件路径不存在，则配置文件路径设置失败，若文件路径存在，则ApacheAssistant将开发者设置的配置文件路径保存。
+
+##### 1.4.2.2 配置项修改
+
+![](https://github.com/buaa0110/ApacheAssistant/blob/master/usecase/RUCM_table/%E9%85%8D%E7%BD%AE%E9%A1%B9%E4%BF%AE%E6%94%B9.png)
+
+开发者可以通过ApacheAssistant进行配置项修改，配置项修改的一般流程如下：首先开发者进入配置管理模块，然后开发者选择修改修改的配置项，包括设置监听端口及协议、设置网页目录位置、设置Keep Alive开关及超时时间、设置最大连接数、设置Request超时时间、设置HTTP Header或设置日志记录格式，之后开发者修改某些配置项的内容，然后开发者点击保存按钮，ApacheAssistant将配置项的修改内容保存。
+
 #### 1.4.3   日志管理
 ![](https://github.com/buaa0110/ApacheAssistant/blob/master/usecase/RUCM_table/%E6%97%A5%E5%BF%97%E7%AE%A1%E7%90%86.png)
+
 开发者可以通过ApacheAssistant对Apache运行过程中生成的日志进行管理，日志管理的一般流程如下：首先开发者进入ApacheAssistant的日志管理模块，之后开发者根据自己的具体日志管理需求进行日志文件路径的设置、日志文件的解析、日志内容的备份或日志内容的清除，日志管理模块实现开发者的日志管理需求之后，开发者关闭日志管理模块即可。
 
 ##### 1.4.3.1 设置日志文件路径
 ![](https://github.com/buaa0110/ApacheAssistant/blob/master/usecase/RUCM_table/%E8%AE%BE%E7%BD%AE%E6%97%A5%E5%BF%97%E6%96%87%E4%BB%B6%E8%B7%AF%E5%BE%84.png)
+
 开发者可以通过ApacheAssistant设置日志文件路径，设置日志文件路径的一般流程如下：首先开发者进入日志管理模块，然后开发者设置日志文件路径，然后ApacheAssistant验证该日志文件路径是否存在，若文件路径不存在，则日志文件路径设置失败，若文件路径存在，则ApacheAssistant将开发者设置的日志文件路径保存。
 
 ##### 1.4.3.2 解析日志文件
 ![](https://github.com/buaa0110/ApacheAssistant/blob/master/usecase/RUCM_table/%E8%A7%A3%E6%9E%90%E6%97%A5%E5%BF%97%E6%96%87%E4%BB%B6.png)
+
 开发者可以通过ApacheAssistant解析日志文件，解析日志文件的一般流程如下：首先开发者进入日志管理模块，然后开发者使用解析日志文件功能，之后开发者根据自己的解析需求对日志文件内容根据时间段展示、根据HTTP请求展示、根据IP地址展示、根据文件类型展示或者根据关键词展示日志内容，之后系统根据开发者需求展示解析出的日志文件内容。
 
 ##### 1.4.3.3 根据时间段展示
 
 ![](https://github.com/buaa0110/ApacheAssistant/blob/master/usecase/RUCM_table/%E6%A0%B9%E6%8D%AE%E6%97%B6%E9%97%B4%E6%AE%B5%E5%B1%95%E7%A4%BA.png)
+
 开发者可以通过ApacheAssistant根据时间段展示日志内容，根据时间段展示日志内容的一般流程如下：首先开发者进入日志管理模块，之后开发者使用解析日志文件功能，之后开发者选取时间段的开始时间和结束时间，ApacheAssistant验证开始时间是否早于结束时间，若结束时间早于开始时间，则根据时间段展示日志内容失败，若开始时间早于结束时间，ApacheAssistant将日志内容根据时间段展示。
+
 ##### 1.4.3.4 根据HTTP请求展示
 
 ![](https://github.com/buaa0110/ApacheAssistant/blob/master/usecase/RUCM_table/%E6%A0%B9%E6%8D%AEHTTP%E8%AF%B7%E6%B1%82%E5%B1%95%E7%A4%BA.png)
+
 开发者可以通过ApacheAssistant根据HTTP请求展示日志内容，根据HTTP请求展示日志内容的一般流程如下：首先开发者进入日志管理模块，之后开发者使用解析日志文件功能，之后开发者选取HTTP请求，之后ApacheAssistant将日志内容根据HTTP请求展示。
+
 ##### 1.4.3.5 根据IP地址展示
 
 ![](https://github.com/buaa0110/ApacheAssistant/blob/master/usecase/RUCM_table/%E6%A0%B9%E6%8D%AEIP%E5%9C%B0%E5%9D%80%E5%B1%95%E7%A4%BA.png)
+
 开发者可以通过ApacheAssistant根据IP地址展示日志内容，根据IP地址展示日志内容的一般流程如下：首先开发者进入日志管理模块，之后开发者使用解析日志文件功能，之后开发者设置IP地址，之后ApacheAssistant将日志内容根据IP地址展示。
+
 ##### 1.4.3.6 根据文件类型展示
 
 ![](https://github.com/buaa0110/ApacheAssistant/blob/master/usecase/RUCM_table/%E6%A0%B9%E6%8D%AE%E6%96%87%E4%BB%B6%E7%B1%BB%E5%9E%8B%E5%B1%95%E7%A4%BA.png)
+
 开发者可以通过ApacheAssistant根据文件类型展示日志内容，根据文件类型展示日志内容的一般流程如下：首先开发者进入日志管理模块，之后开发者使用解析日志文件功能，之后开发者设置文件类型，之后ApacheAssistant将日志内容根据文件类型展示。
+
 ##### 1.4.3.7 根据关键词展示
 
 ![](https://github.com/buaa0110/ApacheAssistant/blob/master/usecase/RUCM_table/%E6%A0%B9%E6%8D%AE%E5%85%B3%E9%94%AE%E8%AF%8D%E5%B1%95%E7%A4%BA.png)
+
 开发者可以通过ApacheAssistant根据关键词展示日志内容，根据关键词展示日志内容的一般流程如下：首先开发者进入日志管理模块，之后开发者使用解析日志文件功能，之后开发者输入关键词，之后ApacheAssistant将日志内容根据关键词进行搜索并展示。
 
 ##### 1.4.3.8 备份日志内容
 
 ![](https://github.com/buaa0110/ApacheAssistant/blob/master/usecase/RUCM_table/%E5%A4%87%E4%BB%BD%E6%97%A5%E5%BF%97%E5%86%85%E5%AE%B9.png)
+
 开发者可以通过ApacheAssistant备份日志内容，备份日志内容的一般流程如下：首先开发者进入日志管理模块，之后开发者使用备份日志内容功能，之后开发者设置备份日志文件路径并指定需备份日志内容的时间段，之后ApacheAssistant将需备份的日志内容备份保存至设置好的文件路径。
+
 ##### 1.4.3.9 清除日志内容
 
 ![](https://github.com/buaa0110/ApacheAssistant/blob/master/usecase/RUCM_table/%E6%B8%85%E9%99%A4%E6%97%A5%E5%BF%97%E5%86%85%E5%AE%B9.png)
+
 开发者可以通过ApacheAssistant清除日志内容，清除日志内容的一般流程如下：首先开发者进入日志管理模块，之后开发者使用清除日志内容功能，之后开发者设置需要被清除的日志文件路径并指定需要被清除日志的时间段，之后ApacheAssistant将需要被清除的日志内容清除。
+
 #### 1.4.4   性能监控
 
 ![](https://github.com/buaa0110/ApacheAssistant/blob/master/usecase/RUCM_table/%E6%80%A7%E8%83%BD%E7%9B%91%E6%8E%A7.png)
+
 开发者可以通过ApacheAssistant在Apache运行过程中进行性能监控，性能监控的一般流程如下：首先开发者进入ApacheAssistant的性能监控模块，之后开发者根据自己的需求查看系统状态、停止Apache HTTP Server、启动Apache HTTP Server或监控性能指标，之后性能监控模块满足开发者需求，开发者关闭性能监控模块即可。
+
 ##### 1.4.4.1 查看系统状态
 
 ![](https://github.com/buaa0110/ApacheAssistant/blob/master/usecase/RUCM_table/%E6%9F%A5%E7%9C%8B%E7%B3%BB%E7%BB%9F%E7%8A%B6%E6%80%81.png)
+
 开发者可以通过ApacheAssistant查看系统状态，查看系统状态的一般流程如下：首先开发者进入性能监控模块，之后开发者使用查看系统状态功能，之后ApacheAssistant将Apache HTTP Server的运行状态展示给开发者。
+
 ##### 1.4.4.2 停止Apache HTTP Server
 
 ![](https://github.com/buaa0110/ApacheAssistant/blob/master/usecase/RUCM_table/%E5%81%9C%E6%AD%A2Apache%20HTTP%20Server.png)
+
 开发者可以通过ApacheAssistant停止Apache HTTP Server，停止Apache HTTP Server的一般流程如下：首先开发者进入性能监控模块，之后开发者将Apache HTTP Server的运行状态设置为停止，之后ApacheAssistant停止运行Apache HTTP Server。
+
 ##### 1.4.4.3 启动Apache HTTP Server
 
 ![](https://github.com/buaa0110/ApacheAssistant/blob/master/usecase/RUCM_table/%E5%90%AF%E5%8A%A8Apache%20HTTP%20Server.png)
+
 开发者可以通过ApacheAssistant启动Apache HTTP Server，启动Apache HTTP Server的一般流程如下：首先开发者进入性能监控模块，之后开发者将Apache HTTP Server的运行状态设置为启动，之后ApacheAssistant启动Apache HTTP Server。
+
 ##### 1.4.4.4 监控性能指标
 
 ![](https://github.com/buaa0110/ApacheAssistant/blob/master/usecase/RUCM_table/%E7%9B%91%E6%8E%A7%E6%80%A7%E8%83%BD%E6%8C%87%E6%A0%87.png)
+
 开发者可以通过ApacheAssistant监控性能指标，监控性能指标的一般流程如下：首先开发者进入性能监控模块，之后开发者查看Apache HTTP Server的并发连接数、网络速度、CPU占用、内存占用等性能指标，之后ApacheAssistant将相应的性能指标展示给开发者。
 
 #### 1.4.5   模块管理
-![]()
+![](https://github.com/buaa0110/ApacheAssistant/blob/master/usecase/RUCM_table/%E6%A8%A1%E5%9D%97%E7%AE%A1%E7%90%86.png)
+
+开发者可以通过ApacheAssistant在Apache运行过程中进行模块管理，模块管理的一般流程如下：首先开发者进入ApacheAssistant的模块模块，之后开发者根据自己的需求查看模块信息、安装模块或卸载模块，之后模块管理模块满足开发者需求，开发者关闭模块管理模块即可。
 
 ##### 1.4.5.1 查看模块信息
-![]()
-##### 1.4.5.2 安装模块
-![]()
-##### 1.4.5.3 卸载模块
-![]()
 
+![](https://github.com/buaa0110/ApacheAssistant/blob/master/usecase/RUCM_table/%E6%9F%A5%E7%9C%8B%E6%A8%A1%E5%9D%97%E4%BF%A1%E6%81%AF.png)
+
+开发者可以通过ApacheAssistant查看模块信息，查看模块信息的一般流程如下：首先开发者进入模块管理模块，之后开发者使用查看模块信息功能查看模块名称、模块类型、模块文件位置、模块状态、模块说明等模块信息，之后ApacheAssistant将相关模块信息展示给开发者。
+
+##### 1.4.5.2 安装模块
+
+![](https://github.com/buaa0110/ApacheAssistant/blob/master/usecase/RUCM_table/%E5%AE%89%E8%A3%85%E6%A8%A1%E5%9D%97.png)
+
+开发者可以通过ApacheAssistant安装模块，安装模块的一般流程如下：首先开发者进入模块管理模块，之后开发者选择指定的模块，之后开发者点击安装模块，之后ApacheAssistant将指定模块安装至Apache HTTP Server。
+
+##### 1.4.5.3 卸载模块
+
+![](https://github.com/buaa0110/ApacheAssistant/blob/master/usecase/RUCM_table/%E5%8D%B8%E8%BD%BD%E6%A8%A1%E5%9D%97.png)
+
+开发者可以通过ApacheAssistant卸载模块，卸载模块的一般流程如下：首先开发者进入模块管理模块，之后开发者选择指定的模块，之后开发者点击卸载模块，之后ApacheAssistant将指定模块从Apache HTTP Server卸载。
 ### 1.5 项目非功能需求
 
 #### 1.5.1   项目非功能需求概述
