--- a/docs/需求文档.md
+++ b/docs/需求文档.md
@@ -1,73 +1,66 @@
 # 面向Apache的个人助手需求文档
 
-## 项目需求
 
-### 1.1 项目背景介绍
 
-#### 1.1.1   项目简介
+## 1 项目背景
+
+### 1.1   项目简介
 ApacheAssistant是一款面向开发者的Web应用程序，它通过可视化的方式帮助用户更好地上手Apache服务器，同时可以帮助用户监听Apache服务器的相关性能指标，是一款帮助开发者更好地管理服务器，提升开发效率的工作应用。
-#### 1.1.2   相关工作
+### 1.2  相关工作
 Apache HTTP Server（简称Apache）是Apache软件基金会的一个开放源码的网页服务器，可以在大多数计算机操作系统中运行，由于其多平台和安全性被广泛使用，是最流行的Web服务器端软件之一。它快速、可靠并且可通过简单的API扩展，将Perl/Python等解释器编译到服务器中。它可以运行在几乎所有广泛使用的计算机平台上。Apache源于NCSAhttpd服务器，经过多次修改，在不断加入的开发者的持续迭代下，Apache功能不断强大，特性越来越好，缺陷逐步修复，目前是世界上最流行的Web服务器软件之一。
-#### 1.1.3   文档组织
+### 1.3   文档组织
 本文档是北京航空航天大学计算机学院研究生课程软件工程实验的课程要求文档之一，本文档旨在对本小组的选题进行简要描述，并对项目需求进行分析。
 软件需求被定义为：
 1)  用户解决问题或达到目标所需条件或权能(Capability)。 
 2)  系统或系统部件要满足合同、标准、规范或其它正式规定文档所需具有的条件或权能。
 3)  一种反映上面(1)或(2)所述条件或权能的文档说明。
 它包括业务需求、用户需求、功能需求、非功能需求。本文档的章节1.2、1.3、1.4、1.5将从这四个方面进行具体的描述。文档的章节二以补充章节一为出发点，从系统架构方面对本程序进行说明。
-#### 1.1.4   术语和缩略语说明
+### 1.4   术语和缩略语说明
 本文中将出现部分属于和缩略语，其含义在此部分进行统一解释，文档中不做再次解释。
 
 
-### 1.2 项目业务需求
+## 2 项目业务需求
 
-#### 1.2.1   ApacheAssistant业务需求概述
+### 2.1   ApacheAssistant业务需求概述
 业务需求（Business requirement）表示组织或客户高层次的目标。业务需求通常来自项目投资人、购买产品的客户、实际用户的管理者、市场营销部门或产品策划部门。业务需求描述了组织为什么要开发一个系统，即组织希望达到的目标。使用前景和范围（vision and scope）文档来记录业务需求，这份文档有时也被称作项目轮廓图或市场需求（project charter 或 market requirement）文档。
 
-#### 1.2.2   便捷化Apache项目的管理
+《补充系统框架和业务简要流程》
+
+### 2.2   便捷化Apache项目的管理
 Apache虽然有着较好的安全性，提供用户会话过程的跟踪，运行相对稳定等一系列优点，但是Apache的管理方法杂乱，配置文件数量繁多，位置难以定位。如果能在简单的交互界面上直观的修改Apache的配置文件达到用户的管理目的，会大大节省此方面的时间。
 
-#### 1.2.3   提供Apache一体化管理监控
+### 2.3   提供Apache一体化管理监控
 在一个Apache项目周期中，用户的需求不止在于修改配置文件上，常常需要管理模块，性能监控，管理日志等等一系列的操作，这些不同的需求操作的方法也不尽相同，繁多的需求和解决方法带来了大量的人力资源的浪费。如果能有一个统一化的服务平台，将开发维护中的需求集合在一起，能使整个项目的管理变得清晰。
 
-#### 1.2.4   减少Apache的上手难度
+### 2.4   减少Apache的上手难度
 Apache是世界使用排名第一的Web服务器软件。它可以运行在几乎所有广泛使用的计算机平台上，由于其跨平台和安全性被广泛使用，是最流行的Web服务器端软件之一。对于新手来说却难以上手，配置文件的数量和修改方式繁多，通常让初学者晕头转向，我们提供简洁大方的交互界面，让新手能对Apache项目的更快地上手。
 
-#### 1.2.5   增强Apache项目的可维护性
+### 2.5   增强Apache项目的可维护性
 Apache日志生成冗长，当用户要查看日志的时候常常发现日志丢失，或者难以找到自己所需求查看的信息，同时Apache在运行时用户可能需求对性能、模块等进行管理，Apache需要加强本身项目的可维护性。
 
 
 
-### 1.3 项目用户需求
+## 3 项目用户需求
 
-#### 1.3.1   用户需求概述
+### 3.1   用户需求概述
 用户需求（User requirement）描述的是用户的目标，或用户要求系统必须能完成的任务。ApacheAssistant应用的主要用户是使用Apache进行完成相关任务的生产开发者。
 生产开发者希望通过本应用达成一定的目的，例如通过图形化界面更好地管理Apache服务器，配置文件的查看、修改，对Apache日志的管理等。项目开发者希望能快速有效地参与到本项目中，要求项目文档、源码的可读性强。
 
-#### 1.3.2  配置管理
-<<<<<<< Updated upstream
+### 3.2  配置管理
 由于Apache的配置项类目繁多，配置文件数目较多，用户使用ApacheAssistant时，能够通过应用对Apache HTTP Server的配置进行管理，主要包括查询当前配置，修改当前配置，设置配置参数。用户可以设置Apache的配置文件路径和配置文件内容，可以设置监听端口和协议，可以设置网页目录的设置Keep Alive开关和超时时间，可以设置服务器最大连接数，可以设置Apache Request超时时间，可以修改HTTP Header的内容，可以设置日志记录的格式。
 
-![](https://github.com/buaa0110/ApacheAssistant/blob/master/usecase/ConfManagement.png)
-
-#### 1.3.3  日志管理
+### 3.3  日志管理
 用户在使用AapcheAssistant时，要能够对Apache生成的日志进行查询和管理。Apache日志文件的路径能够通过ApacheAssistant手动设置。其次，ApacheAssistant可以根据关键词对生成的日志进行搜索，有序地呈现搜索的内容。ApacheAssistant还应该支持多种关键词搜索，如时间段，HTTP请求，IP地址，文件类型等等。对于生成的日志，ApacheAssistant能够进行备份，清楚指定内容。
-
-![](https://github.com/buaa0110/ApacheAssistant/blob/master/usecase/LogManagement.png)
  
-#### 1.3.4  性能监控
+### 3.4  性能监控
 用户需要对Apache HTTP Server进行管理和性能的监控。用户能够通过ApacheAssistant得知当前系统的状态（Apache HTTP Server是启动还是停止），能够停止、重启当前的Apache HTTP Server。ApacheAssistant对Apache HTTP Server进行监控，给用户呈现Apache HTTP Server运行的基本情况。监控的内容包括并发连接数，网络速度，CPU占用率，内存占用率等等。
 
-![](https://github.com/buaa0110/ApacheAssistant/blob/master/usecase/PerfomanceManagement.png)
-
-#### 1.3.5  模块管理
+### 3.5  模块管理
 Apache官方文档给出的标准模块数量多达129个，其中核心模块8个，而常用模块也有数十个，熟悉并熟练使用如此多的模块对于用户而言是非常大的工作量，同时模块类型也分为两类，包括静态和动态两种，其中静态模块不能卸载。用户存在便捷管理模块的客观需要，因此，ApacheAssistant需要帮助用户便捷安装需要的模块或者卸载不再需要的模块，需要查询当前Apache服务器的模块状态。
 
-![](https://github.com/buaa0110/ApacheAssistant/blob/master/usecase/ModelManagement.png)
+## 4 项目功能需求
 
-### 1.4 项目功能需求
-
-#### 1.4.1   项目功能需求概述
+### 4.1   项目功能需求概述
 ApacheAssistant的主要功能需求包括：配置管理，日志管理，性能监控和模块管理。
 下面使用RUCM模型描述用例，通过RUCM模型能够对用例进行规范的描述。RUCM即限制性用例建模，它的目标是：
 1.	使UCMs更加可理解并且更精确。
@@ -76,156 +69,160 @@ RUCM由以下两部分组成：
 1.	一个用于系统组织UCSs的用例模板。
 2.	限制用户写UCSs的一系列规则。
 
-#### 1.4.2   配置管理
+### 4.2   配置管理
 
 ![](https://github.com/buaa0110/ApacheAssistant/blob/master/usecase/RUCM_table/%E9%85%8D%E7%BD%AE%E7%AE%A1%E7%90%86.png)
 
 开发者可以通过ApacheAssistant对Apache HTTP Server进行配置管理，配置管理的一般流程如下：首先开发者进入ApacheAssistant的配置管理模块，之后开发者根据自己的需求进行配置文件路径的设置或对配置项进行修改，配置管理模块实现开发者的需求之后，开发者关闭配置管理模块即可。
 
-##### 1.4.2.1 设置配置文件路径
+#### 4.2.1 设置配置文件路径
 
 ![](https://github.com/buaa0110/ApacheAssistant/blob/master/usecase/RUCM_table/%E8%AE%BE%E7%BD%AE%E9%85%8D%E7%BD%AE%E6%96%87%E4%BB%B6%E8%B7%AF%E5%BE%84.png)
 
 开发者可以通过ApacheAssistant设置配置文件路径，设置配置文件路径的一般流程如下：首先开发者进入配置管理模块，然后开发者设置配置文件路径，然后ApacheAssistant验证设置的配置文件路径是否存在，若文件路径不存在，则配置文件路径设置失败，若文件路径存在，则ApacheAssistant将开发者设置的配置文件路径保存。
 
-##### 1.4.2.2 配置项修改
+#### 4.2.2 配置项修改
 
 ![](https://github.com/buaa0110/ApacheAssistant/blob/master/usecase/RUCM_table/%E9%85%8D%E7%BD%AE%E9%A1%B9%E4%BF%AE%E6%94%B9.png)
 
 开发者可以通过ApacheAssistant进行配置项修改，配置项修改的一般流程如下：首先开发者进入配置管理模块，然后开发者选择修改修改的配置项，包括设置监听端口及协议、设置网页目录位置、设置Keep Alive开关及超时时间、设置最大连接数、设置Request超时时间、设置HTTP Header或设置日志记录格式，之后开发者修改某些配置项的内容，然后开发者点击保存按钮，ApacheAssistant将配置项的修改内容保存。
 
-#### 1.4.3   日志管理
+### 4.3   日志管理
 ![](https://github.com/buaa0110/ApacheAssistant/blob/master/usecase/RUCM_table/%E6%97%A5%E5%BF%97%E7%AE%A1%E7%90%86.png)
 
 开发者可以通过ApacheAssistant对Apache运行过程中生成的日志进行管理，日志管理的一般流程如下：首先开发者进入ApacheAssistant的日志管理模块，之后开发者根据自己的具体日志管理需求进行日志文件路径的设置、日志文件的解析、日志内容的备份或日志内容的清除，日志管理模块实现开发者的日志管理需求之后，开发者关闭日志管理模块即可。
 
-##### 1.4.3.1 设置日志文件路径
+#### 4.3.1 设置日志文件路径
 ![](https://github.com/buaa0110/ApacheAssistant/blob/master/usecase/RUCM_table/%E8%AE%BE%E7%BD%AE%E6%97%A5%E5%BF%97%E6%96%87%E4%BB%B6%E8%B7%AF%E5%BE%84.png)
 
 开发者可以通过ApacheAssistant设置日志文件路径，设置日志文件路径的一般流程如下：首先开发者进入日志管理模块，然后开发者设置日志文件路径，然后ApacheAssistant验证该日志文件路径是否存在，若文件路径不存在，则日志文件路径设置失败，若文件路径存在，则ApacheAssistant将开发者设置的日志文件路径保存。
 
-##### 1.4.3.2 解析日志文件
+#### 4.3.2 解析日志文件
 ![](https://github.com/buaa0110/ApacheAssistant/blob/master/usecase/RUCM_table/%E8%A7%A3%E6%9E%90%E6%97%A5%E5%BF%97%E6%96%87%E4%BB%B6.png)
 
 开发者可以通过ApacheAssistant解析日志文件，解析日志文件的一般流程如下：首先开发者进入日志管理模块，然后开发者使用解析日志文件功能，之后开发者根据自己的解析需求对日志文件内容根据时间段展示、根据HTTP请求展示、根据IP地址展示、根据文件类型展示或者根据关键词展示日志内容，之后系统根据开发者需求展示解析出的日志文件内容。
 
-##### 1.4.3.3 根据时间段展示
+#### 4.3.3 根据时间段展示
 
 ![](https://github.com/buaa0110/ApacheAssistant/blob/master/usecase/RUCM_table/%E6%A0%B9%E6%8D%AE%E6%97%B6%E9%97%B4%E6%AE%B5%E5%B1%95%E7%A4%BA.png)
 
 开发者可以通过ApacheAssistant根据时间段展示日志内容，根据时间段展示日志内容的一般流程如下：首先开发者进入日志管理模块，之后开发者使用解析日志文件功能，之后开发者选取时间段的开始时间和结束时间，ApacheAssistant验证开始时间是否早于结束时间，若结束时间早于开始时间，则根据时间段展示日志内容失败，若开始时间早于结束时间，ApacheAssistant将日志内容根据时间段展示。
 
-##### 1.4.3.4 根据HTTP请求展示
+#### 4.3.4 根据HTTP请求展示
 
 ![](https://github.com/buaa0110/ApacheAssistant/blob/master/usecase/RUCM_table/%E6%A0%B9%E6%8D%AEHTTP%E8%AF%B7%E6%B1%82%E5%B1%95%E7%A4%BA.png)
 
 开发者可以通过ApacheAssistant根据HTTP请求展示日志内容，根据HTTP请求展示日志内容的一般流程如下：首先开发者进入日志管理模块，之后开发者使用解析日志文件功能，之后开发者选取HTTP请求，之后ApacheAssistant将日志内容根据HTTP请求展示。
 
-##### 1.4.3.5 根据IP地址展示
+#### 4.3.5 根据IP地址展示
 
 ![](https://github.com/buaa0110/ApacheAssistant/blob/master/usecase/RUCM_table/%E6%A0%B9%E6%8D%AEIP%E5%9C%B0%E5%9D%80%E5%B1%95%E7%A4%BA.png)
 
 开发者可以通过ApacheAssistant根据IP地址展示日志内容，根据IP地址展示日志内容的一般流程如下：首先开发者进入日志管理模块，之后开发者使用解析日志文件功能，之后开发者设置IP地址，之后ApacheAssistant将日志内容根据IP地址展示。
 
-##### 1.4.3.6 根据文件类型展示
+#### 4.3.6 根据文件类型展示
 
 ![](https://github.com/buaa0110/ApacheAssistant/blob/master/usecase/RUCM_table/%E6%A0%B9%E6%8D%AE%E6%96%87%E4%BB%B6%E7%B1%BB%E5%9E%8B%E5%B1%95%E7%A4%BA.png)
 
 开发者可以通过ApacheAssistant根据文件类型展示日志内容，根据文件类型展示日志内容的一般流程如下：首先开发者进入日志管理模块，之后开发者使用解析日志文件功能，之后开发者设置文件类型，之后ApacheAssistant将日志内容根据文件类型展示。
 
-##### 1.4.3.7 根据关键词展示
+#### 4.3.7 根据关键词展示
 
 ![](https://github.com/buaa0110/ApacheAssistant/blob/master/usecase/RUCM_table/%E6%A0%B9%E6%8D%AE%E5%85%B3%E9%94%AE%E8%AF%8D%E5%B1%95%E7%A4%BA.png)
 
 开发者可以通过ApacheAssistant根据关键词展示日志内容，根据关键词展示日志内容的一般流程如下：首先开发者进入日志管理模块，之后开发者使用解析日志文件功能，之后开发者输入关键词，之后ApacheAssistant将日志内容根据关键词进行搜索并展示。
 
-##### 1.4.3.8 备份日志内容
+#### 4.3.8 备份日志内容
 
 ![](https://github.com/buaa0110/ApacheAssistant/blob/master/usecase/RUCM_table/%E5%A4%87%E4%BB%BD%E6%97%A5%E5%BF%97%E5%86%85%E5%AE%B9.png)
 
 开发者可以通过ApacheAssistant备份日志内容，备份日志内容的一般流程如下：首先开发者进入日志管理模块，之后开发者使用备份日志内容功能，之后开发者设置备份日志文件路径并指定需备份日志内容的时间段，之后ApacheAssistant将需备份的日志内容备份保存至设置好的文件路径。
 
-##### 1.4.3.9 清除日志内容
+#### 4.3.9 清除日志内容
 
 ![](https://github.com/buaa0110/ApacheAssistant/blob/master/usecase/RUCM_table/%E6%B8%85%E9%99%A4%E6%97%A5%E5%BF%97%E5%86%85%E5%AE%B9.png)
 
 开发者可以通过ApacheAssistant清除日志内容，清除日志内容的一般流程如下：首先开发者进入日志管理模块，之后开发者使用清除日志内容功能，之后开发者设置需要被清除的日志文件路径并指定需要被清除日志的时间段，之后ApacheAssistant将需要被清除的日志内容清除。
 
-#### 1.4.4   性能监控
+### 4.4   性能监控
 
 ![](https://github.com/buaa0110/ApacheAssistant/blob/master/usecase/RUCM_table/%E6%80%A7%E8%83%BD%E7%9B%91%E6%8E%A7.png)
 
 开发者可以通过ApacheAssistant在Apache运行过程中进行性能监控，性能监控的一般流程如下：首先开发者进入ApacheAssistant的性能监控模块，之后开发者根据自己的需求查看系统状态、停止Apache HTTP Server、启动Apache HTTP Server或监控性能指标，之后性能监控模块满足开发者需求，开发者关闭性能监控模块即可。
 
-##### 1.4.4.1 查看系统状态
+#### 4.4.1 查看系统状态
 
 ![](https://github.com/buaa0110/ApacheAssistant/blob/master/usecase/RUCM_table/%E6%9F%A5%E7%9C%8B%E7%B3%BB%E7%BB%9F%E7%8A%B6%E6%80%81.png)
 
 开发者可以通过ApacheAssistant查看系统状态，查看系统状态的一般流程如下：首先开发者进入性能监控模块，之后开发者使用查看系统状态功能，之后ApacheAssistant将Apache HTTP Server的运行状态展示给开发者。
 
-##### 1.4.4.2 停止Apache HTTP Server
+#### 4.4.2 停止Apache HTTP Server
 
 ![](https://github.com/buaa0110/ApacheAssistant/blob/master/usecase/RUCM_table/%E5%81%9C%E6%AD%A2Apache%20HTTP%20Server.png)
 
 开发者可以通过ApacheAssistant停止Apache HTTP Server，停止Apache HTTP Server的一般流程如下：首先开发者进入性能监控模块，之后开发者将Apache HTTP Server的运行状态设置为停止，之后ApacheAssistant停止运行Apache HTTP Server。
 
-##### 1.4.4.3 启动Apache HTTP Server
+#### 4.4.3 启动Apache HTTP Server
 
 ![](https://github.com/buaa0110/ApacheAssistant/blob/master/usecase/RUCM_table/%E5%90%AF%E5%8A%A8Apache%20HTTP%20Server.png)
 
 开发者可以通过ApacheAssistant启动Apache HTTP Server，启动Apache HTTP Server的一般流程如下：首先开发者进入性能监控模块，之后开发者将Apache HTTP Server的运行状态设置为启动，之后ApacheAssistant启动Apache HTTP Server。
 
-##### 1.4.4.4 监控性能指标
+#### 4.4.4 监控性能指标
 
 ![](https://github.com/buaa0110/ApacheAssistant/blob/master/usecase/RUCM_table/%E7%9B%91%E6%8E%A7%E6%80%A7%E8%83%BD%E6%8C%87%E6%A0%87.png)
 
 开发者可以通过ApacheAssistant监控性能指标，监控性能指标的一般流程如下：首先开发者进入性能监控模块，之后开发者查看Apache HTTP Server的并发连接数、网络速度、CPU占用、内存占用等性能指标，之后ApacheAssistant将相应的性能指标展示给开发者。
 
-#### 1.4.5   模块管理
+### 4.5   模块管理
 ![](https://github.com/buaa0110/ApacheAssistant/blob/master/usecase/RUCM_table/%E6%A8%A1%E5%9D%97%E7%AE%A1%E7%90%86.png)
 
 开发者可以通过ApacheAssistant在Apache运行过程中进行模块管理，模块管理的一般流程如下：首先开发者进入ApacheAssistant的模块模块，之后开发者根据自己的需求查看模块信息、安装模块或卸载模块，之后模块管理模块满足开发者需求，开发者关闭模块管理模块即可。
 
-##### 1.4.5.1 查看模块信息
+#### 4.5.1 查看模块信息
 
 ![](https://github.com/buaa0110/ApacheAssistant/blob/master/usecase/RUCM_table/%E6%9F%A5%E7%9C%8B%E6%A8%A1%E5%9D%97%E4%BF%A1%E6%81%AF.png)
 
 开发者可以通过ApacheAssistant查看模块信息，查看模块信息的一般流程如下：首先开发者进入模块管理模块，之后开发者使用查看模块信息功能查看模块名称、模块类型、模块文件位置、模块状态、模块说明等模块信息，之后ApacheAssistant将相关模块信息展示给开发者。
 
-##### 1.4.5.2 安装模块
+#### 4.5.2 安装模块
 
 ![](https://github.com/buaa0110/ApacheAssistant/blob/master/usecase/RUCM_table/%E5%AE%89%E8%A3%85%E6%A8%A1%E5%9D%97.png)
 
 开发者可以通过ApacheAssistant安装模块，安装模块的一般流程如下：首先开发者进入模块管理模块，之后开发者选择指定的模块，之后开发者点击安装模块，之后ApacheAssistant将指定模块安装至Apache HTTP Server。
 
-##### 1.4.5.3 卸载模块
+#### 4.5.3 卸载模块
 
 ![](https://github.com/buaa0110/ApacheAssistant/blob/master/usecase/RUCM_table/%E5%8D%B8%E8%BD%BD%E6%A8%A1%E5%9D%97.png)
 
 开发者可以通过ApacheAssistant卸载模块，卸载模块的一般流程如下：首先开发者进入模块管理模块，之后开发者选择指定的模块，之后开发者点击卸载模块，之后ApacheAssistant将指定模块从Apache HTTP Server卸载。
-### 1.5 项目非功能需求
+## 5 项目非功能需求
 
-#### 1.5.1   项目非功能需求概述
+### 5.1   运行环境需求
+
+#### 5.1.1 操作系统
+Windows7版本及以上、Mac OS X 10.7.3 和更高版本、Oracle Linux 5.5 以上、Red Hat Enterprise Linux 5.5 和更高版本、Suse Linux Enterprise Server 10 SP2，11.x及以上、Ubuntu Linux 10.04 和更高版本
+#### 5.1.2 编译环境
+python2.7版本及以上
+#### 5.1.3 Apache版本要求
+Apache2.0.0及以上
+
+
+### 5.2   性能需求
+
+### 5.2.1   项目非功能需求概述
 软件非功能性需求是指软件功能需求以外的需求，包括产品必须遵从的标准、规范和合约，性能要求，设计或实现的宏观约束条件及质量属性。
-#### 1.5.2   兼容性
+### 5.2.2   兼容性
 该Web应用应能在当前主流平台上运行，包括Windows7、Windows8、Windows10及Linux内核操作系统。
-#### 1.5.3   可靠性
+### 5.2.3   可靠性
 该应用保证本身运行的可靠性，作为一款辅助开发者对Apache平台进行操作的应用，应用本身的操作不应破坏Apache平台本身的正确性，具体表现即是不影响Apache本身的功能，并不会潜在的影响Apache平台本身的功能。
-#### 1.5.4   可用性
+### 5.2.4   可用性
 该应用应能够稳定运行，且运行中能提供给用户前述功能。
-#### 1.5.5   稳定性
+### 5.2.5   稳定性
 系统在运行时能够始终稳定运行，不经常出现故障，且出现中小型故障时，能够发出故障警告并给出故障诊断素材供运维人员使用，出现大型故障时，能够保存上下文信息。
-#### 1.5.6   易维护性
+### 5.2.6   易维护性
 应用部分模块或方法的更新和更换不应影响整个应用的正常运行。
-#### 1.5.7   可扩展性
+### 5.2.7   可扩展性
 作为一款开源软件，应用需要具备可扩展性，根据实际情况的不同（例如开发者的变化，用户需求的变化，物理设备的变化），对于应用本身的功能变动应该被支持。
 
-
-## 应用架构
-
-### 2.1 系统整体类图
-
-### 2.2 系统用例图
-
-### 2.3 系统状态图
-
+## 工作重点
