--- a/docs/需求文档.md
+++ b/docs/需求文档.md
@@ -4,30 +4,13 @@
 
 ## 1 项目背景
 
-<<<<<<< Updated upstream
-### 1.1   项目简介
-ApacheAssistant是一款面向开发者的Web应用程序，它通过可视化的方式帮助用户更好地上手Apache服务器，同时可以帮助用户监听Apache服务器的相关性能指标，是一款帮助开发者更好地管理服务器，提升开发效率的工作应用。
-### 1.2  相关工作
+### 1.1 项目概述
 Apache HTTP Server（简称Apache）是Apache软件基金会的一个开放源码的网页服务器，可以在大多数计算机操作系统中运行，由于其多平台和安全性被广泛使用，是最流行的Web服务器端软件之一。
 ![](https://github.com/buaa0110/ApacheAssistant/blob/master/docimage/apachelogo.jpg)
 
-它快速、可靠并且可通过简单的API扩展，将Perl/Python等解释器编译到服务器中。它可以运行在几乎所有广泛使用的计算机平台上。Apache源于NCSAhttpd服务器，经过多次修改，在不断加入的开发者的持续迭代下，Apache功能不断强大，特性越来越好，缺陷逐步修复，目前是世界上最流行的Web服务器软件之一。其框架如图1所示。
+它快速、可靠并且可通过简单的API扩展，将Perl/Python等解释器编译到服务器中。它可以运行在几乎所有广泛使用的计算机平台上。Apache源于NCSAhttpd服务器，经过多次修改，在不断加入的开发者的持续迭代下，Apache功能不断强大，特性越来越好，缺陷逐步修复，目前是世界上最流行的Web服务器软件之一。Apache的结构如图1所示：  
 
 ![](https://github.com/buaa0110/ApacheAssistant/blob/master/docimage/apache.png)
-### 1.3   文档组织
-本文档是北京航空航天大学计算机学院研究生课程软件工程实验的课程要求文档之一，本文档旨在对本小组的选题进行简要描述，并对项目需求进行分析。
-软件需求被定义为：
-1)  用户解决问题或达到目标所需条件或权能(Capability)。 
-2)  系统或系统部件要满足合同、标准、规范或其它正式规定文档所需具有的条件或权能。
-3)  一种反映上面(1)或(2)所述条件或权能的文档说明。
-它包括业务需求、用户需求、功能需求、非功能需求。本文档的章节1.2、1.3、1.4、1.5将从这四个方面进行具体的描述。文档的章节二以补充章节一为出发点，从系统架构方面对本程序进行说明。
-### 1.4   术语和缩略语说明
-本文中将出现部分属于和缩略语，其含义在此部分进行统一解释，文档中不做再次解释。
-=======
->>>>>>> Stashed changes
-
-### 1.1 项目概述
-Apache HTTP Server（简称Apache）是Apache软件基金会的一个开放源码的网页服务器，可以在大多数计算机操作系统中运行，由于其多平台和安全性被广泛使用，是最流行的Web服务器端软件之一。它快速、可靠并且可通过简单的API扩展，将Perl/Python等解释器编译到服务器中。它可以运行在几乎所有广泛使用的计算机平台上。Apache源于NCSAhttpd服务器，经过多次修改，在不断加入的开发者的持续迭代下，Apache功能不断强大，特性越来越好，缺陷逐步修复，目前是世界上最流行的Web服务器软件之一。Apache的结构如图xxxx所示：  
 
 ApacheAssistant是一款面向开发者的Web应用程序，它通过可视化的方式帮助用户更好地上手Apache服务器，同时可以帮助用户监听Apache服务器的相关性能指标，是一款帮助开发者更好地管理服务器，提升开发效率的工作应用。ApacheAssistant的
 
