增加框架描述

--- a/docs/需求文档.md
+++ b/docs/需求文档.md
@@ -52,9 +52,11 @@ ApacheAssistant的用户定义使用Apache的开发人员。
 
 ![img2](https://github.com/buaa0110/ApacheAssistant/blob/master/docimage/%E7%B3%BB%E7%BB%9F%E6%A1%86%E6%9E%B6%E7%AE%80%E5%9B%BE.png)
 
+ApacheAssistant由底层API和图形界面两部分组成，底层API与Apache HTTP Server交互，对Apache HTTP Server的配置文件、日志文件以及Apache HTTP Server的各项性能指标进行读取、解析、记录修改，根据各项功能的具体需求封装为可供界面调用的底层API接口。图形管理界面通过调用底层API实现配置管理、日志管理、性能监控、模块管理等具体的功能，以便开发者使用。
 一个简单的业务流程如图3所示。
 ![](https://github.com/buaa0110/ApacheAssistant/blob/master/docimage/%E4%B8%9A%E5%8A%A1%E6%B5%81%E7%A8%8B%E7%AE%80%E5%9B%BE.png)
 
+开发者在使用ApacheAssistant时通过图形管理界面调用配置管理、日志管理、性能监控、模块管理等功能，做出一系列的操作，然后图形管理界面根据用户操作调用底层API，实现对Apache HTTP Server的配置文件、日志文件的增删改查操作。
 
 ### 2.2   便捷化Apache项目的管理
 Apache虽然有着较好的安全性，提供用户会话过程的跟踪，运行相对稳定等一系列优点，但是Apache的管理方法杂乱，配置文件数量繁多，位置难以定位。如果能在简单的交互界面上直观的修改Apache的配置文件达到用户的管理目的，会大大节省此方面的时间。
