根据老师要求修改性能需求部分

--- a/docs/需求文档.md
+++ b/docs/需求文档.md
@@ -246,16 +246,34 @@ Apache2.0.0及以上
 ### 5.3   性能需求
 
 #### 5.3.1   兼容性
-该Web应用应能在当前主流平台上运行，包括Windows7、Windows8、Windows10及Linux内核操作系统。
+ApacheAssistant应支持在当前主流操作系统上安装和运行，包括以下操作系统：
+
+Windows7及以上
+
+Ubuntu等主流Linux发行版系统，支持版本包括：Ubuntu 14.04及以上
+
 #### 5.3.2   可靠性
-该应用保证本身运行的可靠性，作为一款辅助开发者对Apache平台进行操作的应用，应用本身的操作不应破坏Apache平台本身的正确性，具体表现即是不影响Apache本身的功能，并不会潜在的影响Apache平台本身的功能。
-#### 5.3.4   可用性
-该应用应能够稳定运行，且运行中能提供给用户前述功能。
-#### 5.3.5   稳定性
-系统在运行时能够始终稳定运行，不经常出现故障，且出现中小型故障时，能够发出故障警告并给出故障诊断素材供运维人员使用，出现大型故障时，能够保存上下文信息。
-#### 5.3.6   易维护性
+ApacheAssistant在运行过程中要保证Apache平台本身的可靠性，具体表现为：
+
+配置管理功能不影响配置文件的正确性，从而不影响Apache HTTP Server本身的运行。
+
+日志管理功能不影响Apache HTTP Server原有的日志功能。
+
+性能监控功能不影响Apache HTTP Server原有的性能参数。
+
+模块管理功能在查询模块信息、安装模块和卸载模块时，不影响Apache HTTP Server的模块功能。
+
+#### 5.3.3   可用性
+ApacheAssistant在各平台运行时，配置管理、日志管理、性能监控和模块管理四大主要功能应该保证正常运行，且开发者使用ApacheAssistant时，能达到预期效果。
+
+#### 5.3.4   稳定性
+ApacheAssistant在运行时需要保持本身的稳定性，考虑到实际应用场景，ApacheAssistant的稳定性需要保证稳定运行2小时以内无故障。
+
+出现中小型故障时，能够发出故障警告并给出故障诊断素材供运维人员使用，出现大型故障时，能够保存上下文信息便于维护人员排除故障。
+
+#### 5.3.5   易维护性
 应用部分模块或方法的更新和更换不应影响整个应用的正常运行。
-#### 5.3.7   可扩展性
+#### 5.3.6   可扩展性
 作为一款开源软件，应用需要具备可扩展性，根据实际情况的不同（例如开发者的变化，用户需求的变化，物理设备的变化），对于应用本身的功能变动应该被支持。
 
 ## 6 工作重点
