fix #1846068 完成前言和产品介绍具体内容

--- a/docs/项目计划书.md
+++ b/docs/项目计划书.md
@@ -2,10 +2,93 @@
 # 项目计划书
 
 ## 1. 前言
+### 1.1 文档目标
+
+为了便于协调组内成员进行后期的工作，对项目进行跟踪和监控，对任务的进度进行安排与调控，故对后期工作进行计划。
+
+### 1.2 术语与缩略语
 
 ## 2. 产品简介
+### 2.1 产品概述
+
+ApacheAssistant是一款面向开发者的Web应用程序，它通过可视化的方式帮助用户更好地上手Apache服务器，同时可以帮助用户监听Apache服务器的相关性能指标，是一款帮助开发者更好地管理服务器，提升开发效率的工作应用。
+ApacheAssistant能帮助用户更便捷的使用Apache服务器，让用户可以不必直接操作Apache相对而言比较晦涩的系统，而通过图形化界面直观而简便的对Apache进行操作。ApacheAssistant的框架如图1所示。
+（此处有框架图）
+ApacheAssistant由底层API和图形界面两部分组成，底层API与Apache HTTP Server交互，对Apache HTTP Server的配置文件、日志文件以及Apache HTTP Server的各项性能指标进行读取、解析、记录修改，根据各项功能的具体需求封装为可供界面调用的底层API接口。图形管理界面通过调用底层API实现配置管理、日志管理、性能监控、模块管理等具体的功能，以便开发者使用。其业务流程如图2所示。
+（此处有业务流程图）
+
+### 2.2 用户定义
+
+ApacheAssistant的用户定义使用Apache的开发人员。
+
+### 2.3 产品技术路线
+
+为了实现工作内容，本节拟定了如下的技术路线。
+
+#### 2.3.1 解析文件并提供接口
+
+首先对Apache HTTP Server的配置文件、日志文件以及Apache HTTP Server的各项性能指标进行读取、解析、记录修改，根据各项功能的具体需求封装为可供界面调用的底层API接口。
+
+#### 2.3.2 界面调用接口实现具体功能
+
+ApacheAssistant的图形管理界面通过调用底层的API接口来实现配置管理、日志管理、性能监控、模块管理等具体功能。
 
 ## 3. 项目总体实施计划
+
+参加人员
+职位  姓名  性别
+组长  武丽莎 女
+组员  梁堉  男
+组员  刘彦熙 男
+3.2完成项目最后期限
+本学期第十七周
+3.3本计划的批准者与批准日期
+刘超老师与任健老师
+校历第二周
+3.4项目分工原则
+为了更好更快的完成实验内容，小组采用的是按照个人特点分配任务，在项目确定之后，小组组内进行多次会议，在会议中每个人阐述自己的优势部分，根据个人不同的优势，具体任务分配见第4章项目各阶段实验要点。
+3.5组织形式
+a) 每周3-4次会议，讨论当前工作进展以及各自的问题；
+b) 建微信群，保持实时的交流；
+c) 资源的共享通过华为云进行实现。
+3.6各阶段交付的产品
+序号  产品名称    交付时间
+1   软件项目计划书 第三周
+2   需求规格说明书 第四周
+3   项目计划（华为云项目规划）   每周更新
+4   每周会议记录  每周更新
+5   需求检查单   第六周
+6   软件评审报告  待定
+7   软件产品改进与展示   第十一周
+8   软件测试分析报告    第十二周
+9   软件测试评审报告    待定
+10  软件进度分析报告    待定
+11  工作量分析报告 每周更新
+12  配置管理    每周更新
+
+3.7进度安排原则
+进度安排的原则是首先要估算项目规模大小，然后估算实现这些规模要付出的代价，最后基于这种估算制定项目进度计划。
+对于可能出现的进度变化，本小组计划每周五课后进行讨论，针对下一周的任务进行进度的细化与微调，并在华为云平台上完成项目规划的更新。
+3.8迭代划分情况
+根据项目实际情况及老师要求，本项目的迭代划分规则为：
+第1-3周为第一个迭代：工作基于项目准备、需求分析、配置管理和实验分析四个实验；
+第4-5周为第二个迭代：工作基于需求分析和需求评审；
+此后为每周一个迭代：工作基于该周主要的工作。
+3.9遵循标准
+本项目遵从以下标准：  
+GB/T 13702-1992 计算机软件分类与代码 
+GB/T 19003-2008 软件工程  
+GB/T 9386-2008  计算机测试文档编制 
+GB/T 9385-2008  计算机软件需求规格说明 
+GB/T 5532-2008  计算机软件测试规范 
+GB/T 8567-2006  计算机软件文档编制规范
+3.10硬件环境
+小组每名成员在实验室都有自己的工作电脑，同时也可使用自己的个人电脑。使用个人电脑即可进行代码的阅读、开发、测试、ppt的制作演示等等。
+3.11软件环境
+操作系统    Windows 10，Mac OS X 10.12及以上
+项目管理    华为云平台
+
+
 
 ## 4. 项目各阶段实施要点
 
