fix #1840145 完成了项目计划进度控制

--- a/docs/项目计划书.md
+++ b/docs/项目计划书.md
@@ -123,6 +123,20 @@ GB/T 8567-2006  计算机软件文档编制规范
 
 ### 4.2 软件项目计划
 
+#### 4.2.1 实验介绍
+
+#### 4.2.2 实验时间安排
+
+#### 4.2.3 实验细化与分工
+
+#### 4.2.4 实验交付产品
+
+#### 4.2.5 时间预算及工作量
+
+#### 4.2.6 存在问题及改进要点
+
+#### 4.2.7 后期工作计划
+
 ### 4.3 软件需求评审
 
 ### 4.4 软件项目开发
@@ -134,6 +148,41 @@ GB/T 8567-2006  计算机软件文档编制规范
 ### 4.7 软件测试评审
 
 ### 4.8 项目进度控制
+
+#### 4.8.1 实验介绍
+
+进行实验任务分解分配，完成任务进度计划，并对试验进度进行监控，根据变化适时进行调整，及时沟通小组成员协同处理和开发。
+
+#### 4.8.2 实验时间安排
+
+项目进度控制实验持续时间为校历第二周至第十六周，贯穿整个课程体系。
+
+#### 4.8.3 实验细化与分工
+
+|负责人|任务分解|工作量估计|完成情况|
+|---|---|---|---|
+|王嘉凯|审核每周实验提交文档|8人时|部分完成|
+||制作PPT与答辩|8人时|部分完成|
+|叶俊辰|每周实验文档格式转换和初步审核|16人时|部分完成|
+
+#### 4.8.4 实验交付产品
+
+实验项目进度书。
+
+#### 4.8.5 时间预算及工作量
+
+|项目人员|工作量估计|
+|---|---|
+|王嘉凯|16人时|
+|叶俊辰|16人时|
+
+#### 4.8.6 存在问题及改进要点
+
+对华为云平台使用的不熟练，实际开发过程中遇到的突发情况。改进办法为，对平台多使用多摸索，对项目保持有效的沟通和长期的关注。
+
+#### 4.8.7 后期工作计划
+
+持续监控并适时调整更新。
 
 ### 4.9 配置管理
 
