fix #1847042 完成了项目计划书的软件项目计划部分

--- a/docs/项目计划书.md
+++ b/docs/项目计划书.md
@@ -125,17 +125,50 @@ GB/T 8567-2006  计算机软件文档编制规范
 
 #### 4.2.1 实验介绍
 
+本实验目的是为了更好地顺利完成项目，通过前期的调研分析制定合理的计划。
+
 #### 4.2.2 实验时间安排
+
+校历第四周。
 
 #### 4.2.3 实验细化与分工
 
+|负责人|任务分解|工作量估计|完成情况|
+|---|---|---|---|
+|王嘉凯|项目计划书框架搭建与分工|1人时|已完成|
+||前沿和产品简介|0.5人时|已完成|
+||软件项目计划|1人时|已完成|
+||项目进度控制|1人时|已完成|
+|王宁|软件测试|1人时|已完成|
+||软件测试评审|1人时|已完成|
+|姬索肇|软件项目开发|1人时|已完成|
+||软件产品展示|1人时|已完成|
+|叶俊辰|软件需求分析|1人时|已完成|
+||软件需求评审|1人时|已完成|
+|韩慧敏|配置管理|1人时|已完成|
+||工作量估计与统计分析|1人时|已完成|
+
 #### 4.2.4 实验交付产品
+
+《软件项目计划书》。
 
 #### 4.2.5 时间预算及工作量
 
+|项目人员|工作量估计|
+|---|---|
+|王嘉凯|3.5人时|
+|叶俊辰|2人时|
+|姬索肇|2|
+|王宁|2|
+|韩慧敏|2|
+
 #### 4.2.6 存在问题及改进要点
 
+可能出现的问题是计划不全面或者没有可行性，解决方案是对项目计划进行组内充分的论证。
+
 #### 4.2.7 后期工作计划
+
+完成文档初版后进行组内自评审。
 
 ### 4.3 软件需求评审
 
