--- a/docs/项目计划书.md
+++ b/docs/项目计划书.md
@@ -20,9 +20,139 @@
 ### 4.5 软件产品展示
 
 ### 4.6 软件测试
+进行测试需求定义和测试用例设计，以及对测试需求和测试用例进行评审。选择并学习使用测试工具，生成并执行测试脚本，进行充分性分析和增强测试，并对测试结果进行评审。
+#### 4.6.1 实验介绍
+采用规范的评审方法，确认软件需求，主要包括网上互评审和会议评审。
+#### 4.6.2 实验时间安排
+实验四持续时间为校历1-17周，其中主要工作在校历10、11周完成。
+#### 4.6.3 实验细化与分工
+|负责人|任务分解|工作量估计（单位：人时）|进度及完成情况|
+|---|---|---|---|
+|王宁|讨论测试目标|2|未完成|
+|---|---|---|---|
+| |测试需求分析|2|未完成|
+|---|---|---|---|
+| |测试需求说明|2|未完成|
+|---|---|---|---|
+| |课上答辩|0.5|未完成|
+|---|---|---|---|
+| |记录课上问题及老师评语|1|未完成|
+|---|---|---|---|
+|王嘉凯|讨论测试目标|2|未完成|
+|---|---|---|---|
+| |测试需求分析|2|未完成|
+|---|---|---|---|
+| |测试需求说明|2|未完成|
+|---|---|---|---|
+| |制作PPT|1|未完成|
+|---|---|---|---|
+| |课上答辩|0.5|未完成|
+|---|---|---|---|
+|姬索肇|讨论测试目标|2|未完成|
+|---|---|---|---|
+| |测试需求分析|2|未完成|
+|---|---|---|---|
+| |测试需求说明|2|未完成|
+|---|---|---|---|
+| |课上答辩|0.5|未完成|
+|---|---|---|---|
+|叶俊晨|讨论测试目标|2|未完成|
+|---|---|---|---|
+| |测试需求分析|2|未完成|
+|---|---|---|---|
+| |测试需求说明|2|未完成|
+|---|---|---|---|
+| |课上答辩|0.5|未完成|
+|---|---|---|---|
+|韩慧敏|讨论测试目标|2|未完成|
+|---|---|---|---|
+| |测试需求分析|2|未完成|
+|---|---|---|---|
+| |测试需求说明|2|未完成|
+|---|---|---|---|
+| |制作PPT|1|未完成|
+|---|---|---|---|
+| |课上答辩|0.5|未完成|
+|---|---|---|---|
+#### 4.6.4 实验交付产品
+《软件测试分析报告》
+#### 4.6.5 时间预算及工作量
+|项目人员|工作量估计（单位：人时）|
+|---|---|
+|王宁|7.5|
+|---|---|
+|王嘉凯|7.5|
+|---|---|
+|姬索肇|6.5|
+|---|---|
+|叶俊晨|6.5|
+|---|---|
+|韩慧敏|6.5|
+|---|---|
+#### 4.6.6 存在问题及改进要点
+本实验存在的主要问题在于不能预计实际执行计划中可能出现的问题，对工作量估计不准确。计划每周对工作计划进行迭代更新。
+#### 4.6.7后期工作计划
+根据老师意见修改软件测试文档，继续迭代完善。
 
 ### 4.7 软件测试评审
-
+#### 4.7.1 实验介绍
+采用规范的评审方法，确认测试需求、测试方法和测试结果，主要包括网上互评审和会议评审。
+#### 4.7.2 实验时间安排
+实验5持续时间为校历1-17周，其中主要工作为校历11、12周完成。
+#### 4.7.3 实验细化与分工
+|负责人|任务分解|工作量估计（单位：人时）|进度及完成情况|
+|---|---|---|---|
+|王嘉凯|评审其他组提交产品|3|未完成|
+|---|---|---|---|
+| |复评审其他组提交产品|2|未完成|
+|---|---|---|---|
+| |制作PPT|1|未完成|
+|---|---|---|---|
+| |课上答辩|0.5|未完成|
+|---|---|---|---|
+|王宁|评审其他组提交产品|3|未完成|
+|---|---|---|---|
+| |复评审其他组提交产品|2|未完成|
+|---|---|---|---|
+| |课上答辩|0.5|未完成|
+|---|---|---|---|
+|姬索肇|评审其他组提交产品|3|未完成|
+|---|---|---|---|
+| |复评审其他组提交产品|2|未完成|
+|---|---|---|---|
+| |课上答辩|0.5|未完成|
+|---|---|---|---|
+|叶俊辰|评审其他组提交产品|3|未完成|
+|---|---|---|---|
+| |复评审其他组提交产品|2|未完成|
+|---|---|---|---|
+| |课上答辩|0.5|未完成|
+|---|---|---|---|
+|韩慧敏|评审其他组提交产品|3|未完成|
+|---|---|---|---|
+| |复评审其他组提交产品|2|未完成|
+|---|---|---|---|
+| |课上答辩|0.5|未完成|
+|---|---|---|---|
+#### 4.7.4 实验交付产品
+《软件测试评审报告》
+#### 4.7.5 时间预算及工作量
+|项目人员|工作量估计|
+|---|---|
+|王嘉凯|6.5|
+|---|---|
+|王宁|5.5|
+|---|---|
+|姬索肇|5.5|
+|---|---|
+|叶俊晨|5.5|
+|---|---|
+|韩慧敏|5.5|
+|---|---|
+#### 4.7.6 存在问题及改进要点
+本实验存在的主要问题在于不能预计实际执行计划中可能出现的问题，对工作量估计不准确。计划每周对工作计划进行迭代更新。
+#### 4.7.7 后期工作计划
+完成对测试小组提交产品的评审，组内评审完善自己的产品。
 ### 4.8 项目进度控制
 
 ### 4.9 配置管理
