fix #1840142 完成项目计划书的项目开发和产品展示部分

--- a/docs/项目计划书.md
+++ b/docs/项目计划书.md
@@ -290,7 +290,115 @@ GB/T 8567-2006  计算机软件文档编制规范
 
 ### 4.4 软件项目开发
 
+#### 4.4.1 实验介绍
+
+编写代码实现软件的具体功能与特性。
+
+#### 4.4.2 实验时间安排
+
+主要工作为校历6-8周完成。
+
+#### 4.4.3 实验细化与分工
+
+| 负责人 | 任务分解                       | 工作量估计 | 完成情况 |
+| ------ | ------------------------------ | ---------- | -------- |
+| 王嘉凯 | 完成软件配置管理部分的相关功能 | 15人时     | 未完成   |
+|        | 制作ppt                        | 1人时      | 未完成   |
+|        | 课上答辩                       | 0.5人时    | 未完成   |
+| 姬索肇 | 完成软件底层API部分的相关功能  | 15人时     | 未完成   |
+|        | 制作ppt                        | 1人时      | 未完成   |
+|        | 课上答辩                       | 0.5人时    | 未完成   |
+| 韩慧敏 | 完成软件日志管理部分的相关功能 | 15人时     | 未完成   |
+|        | 制作ppt                        | 1人时      | 未完成   |
+|        | 课上答辩                       | 0.5人时    | 未完成   |
+| 叶俊辰 | 完成软件性能监控部分的相关功能 | 15人时     | 未完成   |
+|        | 制作ppt                        | 1人时      | 未完成   |
+|        | 课上答辩                       | 0.5人时    | 未完成   |
+| 王宁   | 完成软件模块管理部分的相关功能 | 15人时     | 未完成   |
+|        | 制作ppt                        | 1人时      | 未完成   |
+|        | 课上答辩                       | 0.5人时    | 未完成   |
+
+#### 4.4.4 实验交付产品
+
+软件项目源代码
+
+#### 4.4.5 时间预算及工作量估计
+
+| 项目人员 | 工作量估计 |
+| -------- | ---------- |
+| 王嘉凯   | 16.5人时   |
+| 姬索肇   | 16.5人时   |
+| 韩慧敏   | 16.5人时   |
+| 叶俊辰   | 16.5人时   |
+| 王宁     | 16.5人时   |
+
+#### 4.4.6 存在问题及改进要点
+
+本实验存在的主要问题在于不能预计实际执行计划中可能出现的问题，对工作量估计不准确。计划每周对工作计划进行迭代更新。
+
+#### 4.4.7 后期工作计划
+
+根据老师和评审的意见修改软件源代码，继续迭代完善。给出评审小组的问题清单。
+
 ### 4.5 软件产品展示
+
+#### 4.5.1 实验介绍
+
+展示软件的功能与特性，进行任务的定义、设计与实现，并编写软件设计与实现说明书。
+
+#### 4.5.2 实验时间安排
+
+主要工作为校历第9周完成。
+
+#### 4.5.3 实验细化与分工
+
+| 负责人 | 任务分解                                   | 工作量估计 | 完成情况 |
+| ------ | ------------------------------------------ | ---------- | -------- |
+| 王嘉凯 | 设计实现说明书大纲                         | 2人时      | 未完成   |
+|        | 讨论决定说明书内容                         | 2人时      | 未完成   |
+|        | 完成软件设计与实现说明书配置管理部分的撰写 | 5人时      | 未完成   |
+|        | 制作ppt                                    | 1人时      | 未完成   |
+|        | 课上答辩                                   | 0.5人时    | 未完成   |
+| 姬索肇 | 讨论决定说明书内容                         | 2人时      | 未完成   |
+|        | 完成软件设计与实现说明书底层API部分的撰写  | 5人时      | 未完成   |
+|        | 制作ppt                                    | 1人时      | 未完成   |
+|        | 课上答辩                                   | 0.5人时    | 未完成   |
+| 韩慧敏 | 讨论决定说明书内容                         | 2人时      | 未完成   |
+|        | 完成软件设计与实现说明书日志管理部分的撰写 | 5人时      | 未完成   |
+|        | 制作ppt                                    | 1人时      | 未完成   |
+|        | 课上答辩                                   | 0.5人时    | 未完成   |
+| 叶俊辰 | 讨论决定说明书内容                         | 2人时      | 未完成   |
+|        | 完成软件设计与实现说明书性能监控部分的撰写 | 5人时      | 未完成   |
+|        | 制作ppt                                    | 1人时      | 未完成   |
+|        | 课上答辩                                   | 0.5人时    | 未完成   |
+| 王宁   | 讨论决定说明书内容                         | 2人时      | 未完成   |
+|        | 完成软件设计与实现说明书模块管理部分的撰写 | 5人时      | 未完成   |
+|        | 制作ppt                                    | 1人时      | 未完成   |
+|        | 课上答辩                                   | 0.5人时    | 未完成   |
+
+#### 4.5.4 实验交付产品
+
+《软件设计与实现说明书》
+
+#### 4.5.5 时间预算及工作量估计
+
+根据实验细化及分工，得到工作量估计为下表：
+
+| 项目人员 | 工作量估计 |
+| -------- | ---------- |
+| 王嘉凯   | 10.5人时   |
+| 姬索肇   | 8.5人时    |
+| 韩慧敏   | 8.5人时    |
+| 叶俊辰   | 8.5人时    |
+| 王宁     | 8.5人时    |
+
+#### 4.5.6 存在问题及改进要点
+
+本实验存在的主要问题在于不能预计实际执行计划中可能出现的问题，对工作量估计不准确。计划每周对工作计划进行迭代更新。
+
+#### 4.5.7 后期工作计划
+
+根据老师和评审的意见修改软件设计与实现说明书，继续迭代完善。给出评审小组的问题清单。
 
 ### 4.6 软件测试
 进行测试需求定义和测试用例设计，以及对测试需求和测试用例进行评审。选择并学习使用测试工具，生成并执行测试脚本，进行充分性分析和增强测试，并对测试结果进行评审。
