修复配置管理部分出现的错误

--- a/docs/项目计划书.md
+++ b/docs/项目计划书.md
@@ -544,10 +544,12 @@ GB/T 8567-2006  计算机软件文档编制规范
 ||每周制作PPT|2人时|部分完成|
 |叶俊辰|审核每周实验提交文档|5人时|部分完成|
 ||每周制作PPT|2人时|部分完成|
+
 #### 4.9.4 实验交付产品
 《软件配置文档》
 #### 4.9.5 时间预算及工作量分析
 根据实验细化及分工，得到工作量估计为下表：
+
 |项目人员|工作量估计|
 |---|---|
 |王嘉凯|8人时|
@@ -555,6 +557,7 @@ GB/T 8567-2006  计算机软件文档编制规范
 |韩慧敏|7人时|
 |王宁|7人时|
 |叶俊辰|7人时|
+
 #### 4.9.6 存在问题及改进要点
 实验过程中，项目人员对版本管理和变更控制依赖github的版本管理，在华为云平台上的变更控制不够及时和详细，需要在实验过程中加强对华为云平台的使用。
 #### 4.9.7 后期工作计划
@@ -566,7 +569,8 @@ GB/T 8567-2006  计算机软件文档编制规范
 #### 4.10.2 实验时间安排
 工作量估计与统计分析实验持续时间为校历1-18周，贯穿整个课程。
 #### 4.10.3 实验细化与分工
-负责人|任务分解|工作量估计|完成情况|
+
+|负责人|任务分解|工作量估计|完成情况|
 |---|---|---|---|
 |叶俊辰|主要负责本实验|10人时|部分完成|
 ||每周制作PPT|1人时|部分完成|
@@ -582,7 +586,8 @@ GB/T 8567-2006  计算机软件文档编制规范
 《实验计划分析说明书》
 #### 4.10.5 时间预算及工作量估计
 根据实验细化及分工，得到工作量估计为下表：
-项目人员|工作量估计|
+
+|项目人员|工作量估计|
 |---|---|
 |叶俊辰|11人时|
 |王嘉凯|7人时|
