fix #1882725 完成提交并且更新了会议纪要

--- a/docs/会议纪要.md
+++ b/docs/会议纪要.md
@@ -195,3 +195,150 @@
     4.1+4.3：叶俊晨
     4.9+4.10：韩慧敏
 
+
+---
+---
+---
+
+## 20190320会议纪要
+
+
+|时间|地点|主题|
+|---|---|---|
+|13：30-14：30|线上|项目计划-实验6-8专题讨论|
+
+### 到会情况
+
+|王嘉凯|叶俊晨|王宁|姬索肇|韩慧敏|记录人|主持人|
+|---|---|---|---|---|---|---|
+|✔|✔|✔|✔|✔|王嘉凯|王嘉凯|
+
+### 对项目计划部分实验六到实验八进行分工
+
++ 确定实验六到实验八的内容
+    * 项目追踪分析
+    * 项目配置管理
+    * 项目监控文档
+    
++ 讨论任务内容
+    * 配置管理：版本号、项目目录文档结构、会议纪要的规定、命名方式的规定、版本控制方式的规定。
+    * 实验追踪和分析：文档中版本变更记录的规定、分析行为分析
+    * 项目监控：定义为对任务、完成人和ddl控制之类的
+    * 备注：以上内容均为负责人至少应完成的内容，如有必要或者后期工作发现会议为讨论到的内容，可以自行添加
+
++ 任务分工
+    * 王嘉凯：配置管理
+    * 姬索肇：项目监控
+    * 王宁：项目追踪分析
+    * 韩慧敏：软件需求迭代
+    * 叶俊辰：文档格式审查、修改和编制
+
+
+---
+---
+---
+
+## 20190321会议纪要
+
+
+|时间|地点|主题|
+|---|---|---|
+|8：30-9：00|线上|项目计划课上答辩准备|
+
+### 到会情况
+
+|王嘉凯|叶俊晨|王宁|姬索肇|韩慧敏|记录人|主持人|
+|---|---|---|---|---|---|---|
+|✔|✔|✔|✔|✔|王嘉凯|王嘉凯|
+
+### 对本周课上答辩PPT内容分工完成
+
++ 修改内容：叶俊辰
++ 项目监控：姬索肇
++ 追踪分析：王宁
++ 项目计划：韩慧敏
++ 配置管理：王嘉凯
++ 工作总结：王嘉凯
++ 对上一轮check的内容进行修改
++ 对项目计划书中的问题进行新一轮Check
++ 修改方面，谁主张，谁举证，谁提出，谁修改
+
+
+---
+---
+---
+
+## 20190322会议纪要
+
+
+|时间|地点|主题|
+|---|---|---|
+|17：50-18：00|主北405|配置管理讲解|
+
+### 到会情况
+
+|王嘉凯|叶俊晨|王宁|姬索肇|韩慧敏|记录人|主持人|
+|---|---|---|---|---|---|---|
+|✔|✔|✔|✔|✔|王嘉凯|王嘉凯|
+
+### 对配置管理文档中的约定进行细致讲解
+
++ 由王嘉凯对所有团队成员讲解配置管理约定，要求所有参与者遵守并执行（修改之前不合规范的部分）
++ 计划周六所有参与者对文档进行自评审，周日进行最后一版项目需求文档修改
+
+
+---
+---
+---
+
+## 20190324会议纪要
+
+
+|时间|地点|主题|
+|---|---|---|
+|18：00-19：00|线上|需求文档终稿自评审和修改|
+
+### 到会情况
+
+|王嘉凯|叶俊晨|王宁|姬索肇|韩慧敏|记录人|主持人|
+|---|---|---|---|---|---|---|
+|✔|✔|✔|✔|✔|王嘉凯|王嘉凯|
+
+### 针对各成员提出的问题对需求文档进行修改
+
++ 王宁
+    * 出现的第一个APACHE图片没有下标
+    * 在1,4文档概述中没有提到用户需求
+    * 1.6用户定义 描述可能为用户定义为使用的开发人员
+    * 2.1第二段语句不通顺 
+    * API需要介绍一下英文全称吗？
+    * 文档中有时使用Apache 有时使用Apache HTTP Server（如3.2）是为了表示不同的意思吗？？
+    * RUCM UCM 是不是给一下英文全称会好一些
+    * 5.3.2段落为单倍行距 ，表格没有名称表格内文字大小
+    * 需不需要添加参考文献
+    * 格式问题 ，如28页存在大量空白
++ 姬索肇、韩慧敏
+    * 全文档使用空行进行分页，建议使用分页符进行分页
+    * P4版本变更记录第6行第3列多一个逗号，应去掉
+    * 4.44.3445.25362字体不一致，统一字体
+    * “加载模块,初始化系统资，应该补全
+    * P8.13软件需求分析目的「“具体内容可以归纳为五个改为「六个方面方面
+    * P10.16用户定义用户定义：使用 Apache的加上冒号
+    * 术语和缩略语后文出现较多API,加上描述
+    * 3.23不止在于修改配置文件上，改为不只
+    * 14.3.1用户需求概述语句不通顺
+    * 日志管理，清楚指定内容：清除
+    * 如下图4所示->如图4所示
+    * P34.5.2.1+5.3.1两部分操作系统规定不一样
+    * P34.5.3.2行间距不一致
+
++ 叶俊辰
+    * 8页     1.4 3） RUCM第一次出现，给出英文全称
+    * 9页      1.6  不通顺，改成ApacheAssistant的用户定义为使用Apache的开发人员。
+    * 11     Business requirement    都大写或都小写，建议小写
+    * 13页     最后一句Apach需要加强本身的可维护性            去掉项目
+    * 14页    user requirement   都大写或者都小写
+    * 34页   5.2.1  5.2.2  5.2.3 最后一句缺句号
+    * 35页    5.3.4最后一句多一个句号
+
++ 王嘉凯进行主要修改，无法修改的，由提出人进行修改
