完成2019-3-28会议记录

--- a/docs/会议纪要.md
+++ b/docs/会议纪要.md
@@ -342,3 +342,50 @@
     * 35页    5.3.4最后一句多一个句号
 
 + 王嘉凯进行主要修改，无法修改的，由提出人进行修改
+
+
+---
+---
+---
+
+## 20190328会议纪要
+
+
+|时间|地点|主题|
+|---|---|---|
+|22：00-23：00|线上|需求文档评审意见的讨论|
+
+### 到会情况
+
+|王嘉凯|叶俊晨|王宁|姬索肇|韩慧敏|记录人|主持人|
+|---|---|---|---|---|---|---|
+|✔|✔|✔|✔|✔|韩慧敏|韩慧敏|
+
+### 针对B组和C组给出的需求文档评审意见进行讨论
+
++ 针对B组给出的需求文档评审意见
+    * 1,3,4,6,8,10 接受
+    * 2,5,7 部分接受
+    * 9 不接受
++ 针对C组给出的需求文档评审意见
+    * 1,6,10,11,15,16 接受
+    * 2,3,4,5,7,8,9,12,13,14 不接受
+
+### 对文档修改任务及课上答辩任务分工完成
++ 王嘉凯
+    * PPT 需求评审D部分
+    * PPT 需求评审E部分
+    * PPT B需求评审部分
+    * PPT C需求评审部分
+
++ 叶俊辰
+    * PPT 需求改进部分
+
++ 王宁
+    * 本周工作量分析及统计
+
++ 韩慧敏
+    * 根据B组评审意见修改需求文档
+
++ 姬索肇
+    * 根据C组评审意见修改需求文档
