修改了一些小内容

--- a/docs/项目设计与实现文档.md
+++ b/docs/项目设计与实现文档.md
@@ -9,7 +9,7 @@
 本文档在编制时，应该严格依照项目需求文档中功能分析要求，对提到的项目需求进行逐一的实现上的说明和解释。应注意，所有参与编纂本阶段（项目开发迭代）中的文档和代码文件的编纂人员应依照既定规则进行规范化、标准化的编写，其中所有的代码中的变量名、类名和方法名等均应该遵照如下的命名规范：
 + 所有变量名、类名和方法名等均应该清晰、明了，尽量不要出现无具体意义的命名
 + 在前端代码中，所有的css以*class*作为区分，所有的js以*id*作为区分，同时应该注意，命名规则应该采用*lowercase_lowercase*的方式进行命名。
-+ 在后端代码中，所有的方法名均基本遵守PEP8风格，即是，类名以驼峰式命名法进行命名，变量名、方法名和函数名均以*lowercase_lowercase*的样式进行命名。
++ 在后端代码中，所有的方法名均基本遵守PEP8风格，主要内容即是，类名以驼峰式命名法进行命名，变量名、方法名和函数名均以*lowercase_lowercase*的样式进行命名。
 + 为增强代码的可读性，所有的类、方法、函数均应该带上必要的注释。
 
 ## 2 总体设计
