又修改了一些小内容

--- a/docs/项目设计与实现文档.md
+++ b/docs/项目设计与实现文档.md
@@ -10,7 +10,7 @@
 + 所有变量名、类名和方法名等均应该清晰、明了，尽量不要出现无具体意义的命名
 + 在前端代码中，所有的css以*class*作为区分，所有的js以*id*作为区分，同时应该注意，命名规则应该采用*lowercase_lowercase*的方式进行命名。
 + 在后端代码中，所有的方法名均基本遵守PEP8风格，主要内容即是，类名以驼峰式命名法进行命名，变量名、方法名和函数名均以*lowercase_lowercase*的样式进行命名。
-+ 为增强代码的可读性，所有的类、方法、函数均应该带上必要的注释。
++ 为增强代码的可读性，所有的类、方法、函数均应该带上必要的注释，注释应简单清晰，包括但不限于方法说明、代码产生者、必要的参数和返回值信息。
 
 ## 2 总体设计
 ### 2.1需求规定
