--- a/docs/项目设计与实现文档.md
+++ b/docs/项目设计与实现文档.md
@@ -23,6 +23,8 @@
 
 ## 5 实现方案
 
+  主要是类图和活动图、时序图等
+
 ## 6 参考文献
 [1]https://blog.csdn.net/corey_mengxiaodong/article/details/81196779
 [2]https://www.cnblogs.com/zhizhan/p/5546539.html
