添加了新的会议纪要
Co-Authored-By: buaa0110 <king>

--- a/docs/会议纪要.md
+++ b/docs/会议纪要.md
@@ -389,3 +389,34 @@
 
 + 姬索肇
     * 根据C组评审意见修改需求文档
+---
+---
+---
+
+
+## 20190409会议纪要
+
+
+|时间|地点|主题|
+|---|---|---|
+|11：30-12：30|线上|项目设计与实现讨论|
+
+### 到会情况
+
+|王嘉凯|叶俊晨|王宁|姬索肇|韩慧敏|记录人|主持人|
+|---|---|---|---|---|---|---|
+|✔|✔|✔|✔|✔|王嘉凯|王嘉凯|
+
+### 讨论分小组工作
+姬索肇：后端
+韩慧敏：后端
+王嘉凯：全栈
+叶俊辰：前端
+王宁：前端
+### 项目设计与实现文档分工
+架构设计：姬索肇
+实现方案：姬索肇、王嘉凯、王宁
+总体设计：叶俊辰
+界面设计：韩慧敏，王宁
+格式修改：叶俊辰
+引言：王嘉凯
