--- a/docs/项目设计与实现文档.md
+++ b/docs/项目设计与实现文档.md
@@ -14,9 +14,15 @@
 
 ## 2 总体设计
 ### 2.1需求规定
+本项目基于Apache软件进行开发，面向人群为Apache的使用人员，主要目的是使初学者对Apache迅速熟悉和上手，方便开发人员对Apache进行管理。为了满足此需求，本项目需要实现一个Apache个人助手。它能对Apahce的配置文件、日志、模块进行管理，对性能进行监控，并对用户提供简洁大方的交互界面以方便用户查询和修改信息。
 ### 2.2硬件运行环境
++ CPU：Intel i5及以上。
++ 内存：4G内存及以上。
++ 硬盘：4G硬盘及以上。
 ### 2.3软件运行环境
-
++ 操作系统：Windows7版本及以上，Ubuntu Linux 14.04 和更高版本。
++ 编译环境：Python3.5版本及以上。
++ web服务器：Apache2.0.0及以上。
 ## 3 系统架构
 
 ## 4 界面设计
