--- a/docs/项目设计与实现文档.md
+++ b/docs/项目设计与实现文档.md
@@ -20,7 +20,7 @@
 + 内存：4G内存及以上。
 + 硬盘：4G硬盘及以上。
 ### 2.3软件运行环境
-+ 操作系统：Windows7版本及以上，Ubuntu Linux 14.04 和更高版本。
++ 操作系统：Windows7版本及以上，Ubuntu Linux 14.04 和更高版本。-
 + 编译环境：Python3.5版本及以上。
 + web服务器：Apache2.0.0及以上。
 ## 3 系统架构
