整理文档结构

--- a/docs/项目设计与实现文档.md
+++ b/docs/项目设计与实现文档.md
@@ -27,6 +27,10 @@
 
 ## 4 界面设计
 
+ApacheAssistant的前端界面主要包括程序主界面、配置管理界面、日志管理界面、性能监控界面、模块管理界面以及相对应的结果界面。
+
+用户操作界面的具体流程如图所示：
+
 ## 5 实现方案
 
   主要是类图和活动图、时序图等
