完成系统架构部分

--- a/docs/项目设计与实现文档.md
+++ b/docs/项目设计与实现文档.md
@@ -25,6 +25,22 @@
 + web服务器：Apache2.0.0及以上。
 ## 3 系统架构
 
+本项目使用B/S架构(浏览器/服务器)，如下图所示。
+
+![](https://github.com/buaa0110/ApacheAssistant/blob/master/docimage/%E7%B3%BB%E7%BB%9F%E6%9E%B6%E6%9E%84%E5%9B%BE.png?raw=true)
+
+前端框架及对应的功能：
+
+jQuery是一个JavaScript工具库，集成了JavaScript、CSS、DOM和Ajax于一体的强大功能。它可以用最少的代码， 完成更多复杂而困难的功能。
+
+Semantic-UI是一个简洁、美观、易用的CSS框架。引入Semantic-UI之后，只需要修改HTML元素的class属性，就可以使界面更加美观。
+
+ECharts是百度开源的纯 Javascript 图表库，支持折线图、柱状图等多种图表，可用于绘制性能监控部分的图表。
+
+后端框架及对应的功能：
+
+Flask是一个使用 Python编写的轻量级 Web 应用框架。使用Flask可以很方便的实现后端服务器和API，在本项目中，我们使用Flask与Apache日志等文件交互，将具体的功能封装为API供前端调用。
+
 ## 4 界面设计
 
 ApacheAssistant的前端界面主要包括程序主界面、配置管理界面、日志管理界面、性能监控界面、模块管理界面以及相对应的结果界面。
