会议记录补全

--- a/docs/会议纪要.md
+++ b/docs/会议纪要.md
@@ -420,3 +420,95 @@
 界面设计：韩慧敏，王宁
 格式修改：叶俊辰
 引言：王嘉凯
+
+
+## 20190415会议纪要
+
+
+|时间|地点|主题|
+|---|---|---|
+|13：00-13：30|线上|项目具体开发与分工|
+
+### 到会情况
+
+|王嘉凯|叶俊辰|王宁|姬索肇|韩慧敏|记录人|主持人|
+|---|---|---|---|---|---|---|
+|✔|✔|✔|✔|✔|叶俊辰|王嘉凯|
+
+### 前后端框架讨论
++ 对于之前所提出的前端使用Semantic-UI+jquery，后端使用flask，进行了可行性讨论。
++ 初步确定本周开发任务，由于前端人员还并不是对此工具熟悉，本周前端人员主要工作为熟悉框架使用。后端完成API的进一步完善。
+
+---
+---
+---
+
+
+
+
+## 20190418会议纪要
+
+
+|时间|地点|主题|
+|---|---|---|
+|13：00-13：30|线上|DE两组需求复评审意见讨论|
+
+### 到会情况
+
+|王嘉凯|叶俊辰|王宁|姬索肇|韩慧敏|记录人|主持人|
+|---|---|---|---|---|---|---|
+|✔|✔|✔|✔|✔|叶俊辰|王嘉凯|
+
+### 针对DE两组的需求文档评审意见讨论
++ 甲方们意见都非常有针对性和建设性，从意见中能看出DE两组对于我们组审查工作的细致和认真，对于DE两组提出的问题，我们全部接受。
++ 针对DE两组提出的问题，由姬索肇和韩慧敏进行修改。
+
+
+---
+---
+---
+
+
+## 20190423会议纪要
+
+
+|时间|地点|主题|
+|---|---|---|
+|13：00-13：30|线上|前后端开发进度交流|
+
+### 到会情况
+
+|王嘉凯|叶俊辰|王宁|姬索肇|韩慧敏|记录人|主持人|
+|---|---|---|---|---|---|---|
+|✔|✔|✔|✔|✔|叶俊辰|王嘉凯|
+
+### 前后端开发进度交流
++ 后端完成一套功能完整的API，目前实现了具体的功能，暂时没有考虑错误处理情况。
++ 后端的Readme中删除了一些原来的信息，增加了后端开发的进度以及用Postman测试后端API的部分。
++ 前端4个页面进行具体分工，王嘉凯完成配置管理和性能监控，叶俊辰完成模块管理，王宁完成日志管理。
+
+
+---
+---
+---
+
+
+## 20190425会议纪要
+
+
+|时间|地点|主题|
+|---|---|---|
+|13：00-13：30|线上|前后端开发进度交流和ppt准备|
+
+### 到会情况
+
+|王嘉凯|叶俊辰|王宁|姬索肇|韩慧敏|记录人|主持人|
+|---|---|---|---|---|---|---|
+|✔|✔|✔|✔|✔|叶俊辰|王嘉凯|
+
+### ppt准备
++ 姬索肇准备后端介绍，王嘉凯准备前端介绍。
+
+### 前后端开发进度交流
++ 需要每人提供一张个人照片或者头像和一段简单简介，以补全团队介绍部分。
++ 配置管理和模块管理页面布局基本完成，继续开发页面逻辑和后端交互。
