测试需求文档

--- a/docs/测试需求文档/测试需求说明书.md
+++ b/docs/测试需求文档/测试需求说明书.md
@@ -17,20 +17,47 @@ ApacheAssisstant 1.0版本开发完成
 |2|HTTP|超文本传输协议|
 |3|IP|互联网协议地址|
 |4|Python|一种面向对象的解释型计算机程序设计语言|
+|5|RUCM|限制性用例模型|
+|6|UCM|用例建模|
+|7|接口|API（Application Programming Interface），是一些预先定义的函数，目的是提供应用程序与开发人员基于某软件或硬件得以访问一组例程的能力，而又无需访问源码，或理解内部工作机制的细节|
+|8|日志|网络设备、系统及服务程序等，在运作时产生的log事件记录|
+
 
 
 ## 2 测试计划
 ### 2.1测试目标
 测试参考《需求规格说明书》中的用例，对每个功能进行测试。每个需求用例有对应的测试用例，主要对功能需求和非功能需求两个方面进行测试。首先需讨论测试所要做的工作，包括编写测试需求说明书，设计测试用例，编写测试脚本，根据结果编写测试报告，然后进行小组分工，分别完成各自的工作。
 ### 2.2 测试分工
-
+|成员|主要职责|测试用例|
+|------|------|-------|
+|王嘉凯|编写测试需求说明书，做部分功能性测试与非功能性测试||
+|王宁|||
+|叶俊辰|||
+|姬索肇|||
+|韩慧敏|||
 ### 2.3 测试用例与需求用例对照表
 
 ### 2.4 测试环境
 
 ## 3 功能需求测试设计
+|测试用例名称||测试用例标识|用例TC1|
+|简要描述||
+|前提和约束||
+|测试方法|黑盒/白盒测试|
+|测试过程描述|
+|序号|测试步骤|预期结果
+|1|||
+|备注||
+|测试结论||
+|测试人员：|测试时间：|
 
 ## 4 非功能需求测试设计
+### 4.1 兼容性
+### 4.2 可靠性
+### 4.3 可用性
+### 4.4 稳定性
+### 4.5 易维护性
+### 4.6 可拓展性
 
-
-## 5 参考文献
+## 5 总结
+## 6 参考文献
