完成了测试需求文档的完善和任务分工

--- a/docs/测试需求文档/测试需求说明书.md
+++ b/docs/测试需求文档/测试需求说明书.md
@@ -1,6 +1,11 @@
 # 面向Apache的个人助手设计与实现说明书
 
 
+|日期|变更人|变更内容|版本号|
+|---|---|---|---|
+|20190513|王嘉凯|对照需求文档完善了测试需求说明书的测试分工和测试设计框架编写|V1.0.1|
+||王宁||V1.0.0|
+
 ## 1 引言
 ### 1.1编写目的
 本测试文档的编写目的，是为了发现软件缺陷与错误，对软件质量进行度量和评估，以提高软件的质量。主要包含以下几个方面：验证ApacheAssisstant在需求说明书中提到的需求和功能是否得到了完整实现，发现软件系统的缺陷与不足，提供可以用以分析的测试结果数据，获取软件产品的质量信息。
@@ -30,17 +35,38 @@ ApacheAssisstant 1.0版本开发完成
 ### 2.2 测试分工
 |成员|主要职责|测试用例|
 |------|------|-------|
-|王嘉凯|编写测试需求说明书，做部分功能性测试与非功能性测试||
-|王宁|||
-|叶俊辰|||
-|姬索肇|||
-|韩慧敏|||
+|王嘉凯|完善测试需求说明书框架，对测试任务进行分工做部分功能性测试|配置管理、日志管理|
+|王宁|编写测试需求说明书框架，做部分功能性测试，对测试过程中出现的与需求文档的不一致问题进行修改|性能管理|
+|叶俊辰|完成部分功能性测试，完成测试环境部分文档编写，统一刷格式|模块管理|
+|姬索肇|完成部分非功能性测试，完成部分测试用例与需求用例对照表|兼容性、可靠性、可用性|
+|韩慧敏|完成部分非功能性测试，完成部分测试用例与需求用例对照表|稳定性、易维护性、可拓展性|
 ### 2.3 测试用例与需求用例对照表
 
 ### 2.4 测试环境
-
+测试环境部分应当有
 ## 3 功能需求测试设计
-
+### 3.1 配置管理
+#### 3.1.1 设置配置文件路径
+#### 3.1.2 配置项修改
+### 3.2 日志管理
+#### 3.2.1 设置日志文件路径
+#### 3.2.2 解析日志文件
+#### 3.2.3 根据时间段展示日志
+#### 3.2.4 根据HTTP请求展示
+#### 3.2.5 根据IP地址展示
+#### 3.2.6 根据文件类型展示
+#### 3.2.7 根据关键词展示
+#### 3.2.8 备份日志内容
+#### 3.2.9 清楚日志内容
+### 3.3 性能监控
+#### 3.3.1 查看系统状态
+#### 3.3.2 停止Apache HTTP Server
+#### 3.3.3 启动Apache HTTP Server
+#### 3.3.4 监控性能指标
+### 3.5 模块管理
+#### 3.5.1 查看模块信息
+#### 3.5.2 安装模块
+#### 3.5.3 卸载模块
 
 ## 4 非功能需求测试设计
 ### 4.1 兼容性
