添加了负责部分功能测试的用例doc

--- a/docs/测试需求文档/测试需求说明书.md
+++ b/docs/测试需求文档/测试需求说明书.md
@@ -46,6 +46,7 @@ ApacheAssisstant 1.0版本开发完成
 测试环境部分应当有
 ## 3 功能需求测试设计
 ### 3.1 配置管理
+
 #### 3.1.1 设置配置文件路径
 #### 3.1.2 配置项修改
 ### 3.2 日志管理
@@ -57,7 +58,7 @@ ApacheAssisstant 1.0版本开发完成
 #### 3.2.6 根据文件类型展示
 #### 3.2.7 根据关键词展示
 #### 3.2.8 备份日志内容
-#### 3.2.9 清楚日志内容
+#### 3.2.9 清除日志内容
 ### 3.3 性能监控
 #### 3.3.1 查看系统状态
 #### 3.3.2 停止Apache HTTP Server
