测试需求说明书重传

--- a/docs/测试需求文档/测试需求说明书.md
+++ b/docs/测试需求文档/测试需求说明书.md
@@ -43,7 +43,15 @@ ApacheAssisstant 1.0版本开发完成
 ### 2.3 测试用例与需求用例对照表
 
 ### 2.4 测试环境
-测试环境部分应当有
+#### 2.4.1 硬件测试环境
+* CPU: Inter i5及以上。
+* 内存： 4G及以上。
+* 硬盘： 4G及以上。
+#### 2.4.2 软件测试环境
+* 操作系统： Windows7版本及以上，Ubuntu Linux 14.04和更高版本。
+* 编译环境： Python3.5版本及以上。
+* web服务器： Apache2.0.0及以上。
+
 ## 3 功能需求测试设计
 ### 3.1 配置管理
 
