--- a/docs/会议纪要.md
+++ b/docs/会议纪要.md
@@ -498,7 +498,7 @@
 
 |时间|地点|主题|
 |---|---|---|
-|13：00-13：30|线上|前后端开发进度交流和ppt准备|
+|13：00-13：30|线上|前后端开发进度交流|
 
 ### 到会情况
 
@@ -506,9 +506,80 @@
 |---|---|---|---|---|---|---|
 |✔|✔|✔|✔|✔|叶俊辰|王嘉凯|
 
-### ppt准备
-+ 姬索肇准备后端介绍，王嘉凯准备前端介绍。
-
 ### 前后端开发进度交流
 + 需要每人提供一张个人照片或者头像和一段简单简介，以补全团队介绍部分。
 + 配置管理和模块管理页面布局基本完成，继续开发页面逻辑和后端交互。
+
+## 20190426会议纪要
+
+
+|时间|地点|主题|
+|---|---|---|
+|8：00-8：30|线上|本周汇报任务分工和团队介绍页面设计|
+
+### 到会情况
+
+|王嘉凯|叶俊辰|王宁|姬索肇|韩慧敏|记录人|主持人|
+|---|---|---|---|---|---|---|
+|✔|✔|✔|✔|✔|王嘉凯|王嘉凯|
+
+### ppt准备
++ 王宁和韩慧敏准备追踪分析PPT
++ 叶俊成汇总所有的PPT
++ 姬索肇完成后段工作汇报
++ 团队介绍最终讨论决定用简约版（不需要照片和个人介绍）
+
+## 20190427会议纪要
+
+
+|时间|地点|主题|
+|---|---|---|
+|6：00-6：20|线下教室|下一步计划（包含假期）|
+
+### 到会情况
+
+|王嘉凯|叶俊辰|王宁|姬索肇|韩慧敏|记录人|主持人|
+|---|---|---|---|---|---|---|
+|✔|✔|✔|✔|✔|王嘉凯|王嘉凯|
+
+### 主要内容
++ 下一步主要是开发周期，要尽量完成所有内容
++ 先分别确认完成完善前端和后端内容
++ 分组完成后，进入前后端耦合阶段
++ 任务周期包含假期，不组织会议，要求所有人遇到前后端问题，及时在群里交流
+
+## 20190505会议纪要
+
+|时间|地点|主题|
+|---|---|---|
+|9：00-9：50|线上|前后端问题解决|
+
+### 到会情况
+
+|王嘉凯|叶俊辰|王宁|姬索肇|韩慧敏|记录人|主持人|
+|---|---|---|---|---|---|---|
+|✔|✔|✔|✔|✔|王嘉凯|王嘉凯|
+
+### 问题讨论
++ 前端出现的跨域请求问题，考虑后端想法子处理，但最终经过验证，前端只需要略微改变发送请求的内容即可修复此问题，最终决定前端改。
++ 后端API进度交流，目前性能监控API尚未完成，进度需要推进，格式达成规范（列表或者Json串）
++ 对于出现的错误码返回问题，发现是前端的ajax函数有遗漏，应用error函数接受错误情况下的ajax信息
+
+## 20190507会议纪要
+
+
+|时间|地点|主题|
+|---|---|---|
+|13：00-13：40|线上|前后端耦合推进|
+
+### 到会情况
+
+|王嘉凯|叶俊辰|王宁|姬索肇|韩慧敏|记录人|主持人|
+|---|---|---|---|---|---|---|
+|✔|✔|✔|✔|✔|王嘉凯|王嘉凯|
+
+### 问题讨论
++ 对后端的API提供的信息内容进行讨论：拆分现有的API，1变6，方便分开访问
++ 针对性能监控路径的API进行解释
++ 配置管理的前端请求无效问题，要求前后端同时check，最终发现后端说明文档省略了某些信息，前端的信息格式也有问题
++ 研究性能管理页面网速监控无法直接得到数据的解决方案，最终决定选择前端存储即时计算
