添加新的会议纪要

--- a/docs/会议纪要.md
+++ b/docs/会议纪要.md
@@ -589,4 +589,43 @@
 + 针对性能监控路径的API进行解释
 + 配置管理的前端请求无效问题，要求前后端同时check，最终发现后端说明文档省略了某些信息，前端的信息格式也有问题
 + 研究性能管理页面网速监控无法直接得到数据的解决方案，最终决定选择前端存储即时计算
->>>>>>> b6819748176a2cc2f7f2074bc0f091de828332da
+
+## 20190509会议纪要
+
+
+|时间|地点|主题|
+|---|---|---|
+|20：00-20：30|线上|前后端耦合推进|
+
+### 到会情况
+
+|王嘉凯|叶俊辰|王宁|姬索肇|韩慧敏|记录人|主持人|
+|---|---|---|---|---|---|---|
+|✔|✔|✔|✔|✔|王嘉凯|王嘉凯|
+
+### 问题讨论
++ 确认对API的新的修改，主要是将load_log_text的功能合并到filter_log_text，防止产生误解，以最新的后端API表格文件为准。
+另外，具体的查询字段在demo.py中filter_log_text函数中可以看到
++ 解决了查询输入为空时的返回值问题
++ 安排本周汇报的PPT分工
+
+
+## 20190512会议纪要
+
+
+|时间|地点|主题|
+|---|---|---|
+|20：00-21：00|线上|测试迭代阶段分工|
+
+### 到会情况
+
+|王嘉凯|叶俊辰|王宁|姬索肇|韩慧敏|记录人|主持人|
+|---|---|---|---|---|---|---|
+|✔|✔|✔|✔|✔|王嘉凯|王嘉凯|
+
+### 问题讨论
++ 根据老师课上的要求，本周需要完成测试阶段的两个主要文档，测试需求设计文档和测试报告
++ 测试需求设计文档的任务分工为：王宁-框架搭建、功能测试设计，王嘉凯-模型搭建、功能测试设计，姬索肇-性能测试设计，韩慧敏-性能测试设计，叶俊辰-功能测试设计
++ 明确测试需求设计文档的DDL是本周三晚上10：00
++ 明确周四一天需要完成测试和测试报告并进行PPT本周汇报PPT准备
++ PPT准备由王嘉凯牵头，其他人配合完成各自负责部分。
