添加了本周最新的会议纪要

--- a/docs/会议纪要.md
+++ b/docs/会议纪要.md
@@ -629,3 +629,28 @@
 + 明确测试需求设计文档的DDL是本周三晚上10：00
 + 明确周四一天需要完成测试和测试报告并进行PPT本周汇报PPT准备
 + PPT准备由王嘉凯牵头，其他人配合完成各自负责部分。
+
+
+## 20190517会议纪要
+
+
+|时间|地点|主题|
+|---|---|---|
+|18：00-18：20|教室|测试修改|
+
+### 到会情况
+
+|王嘉凯|叶俊辰|王宁|姬索肇|韩慧敏|记录人|主持人|
+|---|---|---|---|---|---|---|
+|✔|✔|✔|✔|✔|王嘉凯|王嘉凯|
+
+### 问题讨论
++ 根据目前的进度，对在上周测试过程中发现的问题进行汇总
++ 修改前端数据传输发现错误的时候的提示方式（alert）
++ 讨论本周任务和分工：
+  + 完善测试规格需求说明书
+  + 修复兼容性问题
+  + 排查未进行错误处理的情况
+  + 完善测试结果报告
+  + 完成软件问题报告和修复结果
+  + 确定两个时间点（周一早上10：00和周三早上10：00）
