会议记录补全

--- a/docs/会议纪要.md
+++ b/docs/会议纪要.md
@@ -654,3 +654,46 @@
   + 完善测试结果报告
   + 完成软件问题报告和修复结果
   + 确定两个时间点（周一早上10：00和周三早上10：00）
+
+
+
+## 20190520会议纪要
+
+
+|时间|地点|主题|
+|---|---|---|
+|18：00-18：20|线上|bug修改和项目评审|
+
+### 到会情况
+
+|王嘉凯|叶俊辰|王宁|姬索肇|韩慧敏|记录人|主持人|
+|---|---|---|---|---|---|---|
+|✔|✔|✔|✔|✔|叶俊辰|王嘉凯|
+
+### 问题讨论
++ 汇总目前还剩下的bug，并且确实解决的人员和方案。
++ 讨论本周的任务和分工：
+    + 姬索肇和韩慧敏负责配合B组人员对我们的项目进行评审。
+    + 王宁和叶俊辰负责去E组的评审，和E组约定评审时间。
+    + 王嘉凯负责汇总和ppt的制作。
+
+
+## 20190527会议纪要
+
+
+|时间|地点|主题|
+|---|---|---|
+|18：00-18：20|线上|项目复评审|
+
+### 到会情况
+
+|王嘉凯|叶俊辰|王宁|姬索肇|韩慧敏|记录人|主持人|
+|---|---|---|---|---|---|---|
+|✔|✔|✔|✔|✔|叶俊辰|王嘉凯|
+
+### 问题讨论
++ 讨论本周的任务和分工：
+    + 姬索肇和韩慧敏负责对B组项目进行评审。
+    + 王嘉凯负责回复E组的测试报告、回复B组测试报告、根据测试报告修改需求文档、测设设计文档、测试报告
+    + 王宁负责进行跟踪实验追踪分析文档和项目监控文档。
+    
