补充会议记录

--- a/docs/会议纪要.md
+++ b/docs/会议纪要.md
@@ -195,7 +195,6 @@
     4.1+4.3：叶俊晨
     4.9+4.10：韩慧敏
 
-
 ---
 ---
 ---
@@ -233,7 +232,6 @@
     * 韩慧敏：软件需求迭代
     * 叶俊辰：文档格式审查、修改和编制
 
-
 ---
 ---
 ---
@@ -263,7 +261,6 @@
 + 对项目计划书中的问题进行新一轮Check
 + 修改方面，谁主张，谁举证，谁提出，谁修改
 
-
 ---
 ---
 ---
@@ -285,7 +282,6 @@
 
 + 由王嘉凯对所有团队成员讲解配置管理约定，要求所有参与者遵守并执行（修改之前不合规范的部分）
 + 计划周六所有参与者对文档进行自评审，周日进行最后一版项目需求文档修改
-
 
 ---
 ---
@@ -342,7 +338,6 @@
     * 35页    5.3.4最后一句多一个句号
 
 + 王嘉凯进行主要修改，无法修改的，由提出人进行修改
-
 
 ---
 ---
@@ -492,7 +487,6 @@
 + 后端完成一套功能完整的API，目前实现了具体的功能，暂时没有考虑错误处理情况。
 + 后端的Readme中删除了一些原来的信息，增加了后端开发的进度以及用Postman测试后端API的部分。
 + 前端4个页面进行具体分工，王嘉凯完成配置管理和性能监控，叶俊辰完成模块管理，王宁完成日志管理。
-
 
 ---
 ---
@@ -696,4 +690,46 @@
     + 姬索肇和韩慧敏负责对B组项目进行评审。
     + 王嘉凯负责回复E组的测试报告、回复B组测试报告、根据测试报告修改需求文档、测设设计文档、测试报告
     + 王宁负责进行跟踪实验追踪分析文档和项目监控文档。
-    
+
+
+## 20190603会议纪要
+
+
+|时间|地点|主题|
+|---|---|---|
+|19：00-19：30|线下|项目展示|
+
+### 到会情况
+
+|王嘉凯|叶俊辰|王宁|姬索肇|韩慧敏|记录人|主持人|
+|---|---|---|---|---|---|---|
+|✔|✔|✔|✔|✔|韩慧敏|王嘉凯|
+
+### 问题讨论
++ 讨论本周的任务和分工：
+    + 根据目前项目任务进度完善项目任务完成情况。
+    + 统计各实验阶段组内人员的实际工作时长，完善项目任务量监控情况。
+    + 根据预估任务量和实际工作量进行工作量估计与分析。    
+
+
+## 20190610会议纪要
+
+
+|时间|地点|主题|
+|---|---|---|
+|18：00-18：20|线上|项目追踪与监控|
+
+### 到会情况
+
+|王嘉凯|叶俊辰|王宁|姬索肇|韩慧敏|记录人|主持人|
+|---|---|---|---|---|---|---|
+|✔|✔|✔|✔|✔|韩慧敏|王嘉凯|
+
+### 问题讨论
++ 讨论本周的任务和分工：
+    + 完善项目配置管理文档。
+    + 完成项目追踪分析文档。
+    + 完成工作量估计与统计分析报告。
+    + 制作项目展示PPT。
+    + 制作项目演示视频。
+    + 完成评审修改确认证明单。
