--- a/docs/会议纪要.md
+++ b/docs/会议纪要.md
@@ -697,7 +697,7 @@
 
 |时间|地点|主题|
 |---|---|---|
-|19：00-19：30|线下|项目展示|
+|19：00-19：30|线下|项目追踪分析|
 
 ### 到会情况
 
@@ -730,6 +730,25 @@
     + 完善项目配置管理文档。
     + 完成项目追踪分析文档。
     + 完成工作量估计与统计分析报告。
+    + 生成评审修改确认证明单。
+
+
+## 20190612会议纪要
+
+
+|时间|地点|主题|
+|---|---|---|
+|14：00-14：30|线上|项目展示|
+
+### 到会情况
+
+|王嘉凯|叶俊辰|王宁|姬索肇|韩慧敏|记录人|主持人|
+|---|---|---|---|---|---|---|
+|✔|✔|✔|✔|✔|韩慧敏|王嘉凯|
+
+### 问题讨论
++ 讨论本周的任务和分工：
     + 制作项目展示PPT。
     + 制作项目演示视频。
-    + 完成评审修改确认证明单。
+    + 完善配置管理文档，添加会议纪要分析和配置总结。
+    + 评审修改确认证明单签字。
